--- a/java/java8/01_正则表达式.md
+++ b/java/java8/01_正则表达式.md
@@ -109,8 +109,54 @@ while(matcher.find()) {
 }
 ```
 
+### replaceAll/replaceFirst
+
+- replaceAll() 和 replaceFirst() 方法可以用于替换Matcher搜索字符串中的一部分。
+- replaceAll() 方法替换全部匹配的正则表达式，replaceFirst() 只替换第一个匹配的。
+
+### appendReplacement/appendTail
+
+```java
+public Matcher appendReplacement(StringBuffer sb, String replacement)
+public StringBuffer appendTail(StringBuffer sb)
+```
+
+- appendReplacement() 和 appendTail() 方法用于替换输入文本中的字符串短语，同时把替换后的字符串附加到一个 StringBuffer 中。
+- 当find() 方法找到一个匹配项时，可以调用 appendReplacement() 方法，这会导致输入字符串被增加到StringBuffer 中，而且匹配文本被替换。 从上一个匹配文本结尾处开始，直到本次匹配文本会被拷贝。
+- appendReplacement() 会记录拷贝StringBuffer 中的内容，可以持续调用find(),直到没有匹配项。
+- 直到最后一个匹配项目，输入文本中剩余一部分没有拷贝到 StringBuffer. 这部分文本是从最后一个匹配项结尾，到文本末尾部分。**通过调用 appendTail() 方法，可以把这部分内容拷贝到 StringBuffer 中**
+
+```java
+String text = "John writes about this, and John Doe writes about that, and John Wayne writes about everything.";
+
+String patternString1 = "((John) (.+?)) ";
+Pattern pattern = Pattern.compile(patternString1);
+Matcher matcher = pattern.matcher(text);
+StringBuffer stringBuffer = new StringBuffer();
+
+while(matcher.find()){
+    matcher.appendReplacement(stringBuffer, "Joe Blocks ");
+    System.out.println(stringBuffer.toString());
+}
+matcher.appendTail(stringBuffer);
+System.out.println(stringBuffer.toString());
+
+```
+
 ### group
 
+- 分组在正则表达式中用括号表示,**括号不属于要匹配的文本。**
+- 当正则表达式匹配到文本后，可以访问分组内的部分。一个正则表达式可以有多个分组。**每个分组由一对括号标记**。想要访问正则表达式中某分组匹配的文本，可以把分组编号传入 group(int groupNo)方法。
+- **group(0)永远表示整个正则表达式**
+
+```java
+String patternStr = "((A)(B(C)))"
+// 一共有4个分组
+// 1        ((A)(B(C)))
+// 2        (A)
+// 3        (B(C))
+// 4        (C)
+```
 
 
 
