--- a/java/java8/01_正则表达式.md
+++ b/java/java8/01_正则表达式.md
@@ -1,5 +1,11 @@
 # 正则表达式
 
+## 参考
+
+- [Java 正则表达式(精华)](http://www.jianshu.com/p/984b5e31868e)
+- [Java正则表达式详解](http://www.jianshu.com/p/169b19aaebb0)
+- [正则表达式具体的语法](http://tool.oschina.net/apidocs/apidoc?api=jdk-zh)
+
 ## Pattern
 
 - Pattern 类包含多个标志(int 类型),这些标志可以控制Pattern 匹配模式的方式。上面代码中的标志使模式匹配忽略大小写
