--- a/java/java util/01_正则表达式.md
+++ b/java/java util/01_正则表达式.md
@@ -183,6 +183,8 @@ String patternStr = "((A)(B(C)))"
 
 ![内置字符](./../../image-resources/regex/正则_内置字符.png)
 
+![逻辑](./../../image-resources/regex/正则_逻辑.png)
+
 ![正则_边界限定](./../../image-resources/regex/正则_边界限定.png)
 
 ![量词](./../../image-resources/regex/正则_量词.png)
