--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -228,6 +228,7 @@ var graph = make(map[string]map[string]bool)
 
 func addEdge(from, to string) {
     edges := graph[from]
+    // 惰性加载
     if edges == nil {
         edges = make(map[string]bool)
         graph[from] = edges
@@ -241,3 +242,195 @@ func hasEdge(from, to string) bool {
 ```
 
 ## 结构体
+
+## 结构体2
+
+### 结构体初始化
+
+- 结构体的初始化，**无论哪种方法，如果不在定义结构体的包内部，都没法初始化未导出的值**
+    - 按结构体变量定义的顺序指定**每个变量**的值，只在定义结构体的包内部使用，或者是在较小的结构体中使用
+    - 通过成员名字和相应的值来初始化，未指定使用零值
+
+```golang
+type Point struct{ X, Y int }
+p := Point{1, 2}
+p1 := Point{X:1, Y :2}
+```
+
+```golang
+package p
+type T struct{ a, b int } // a and b are not exported
+
+package q
+import "p"
+var _ = p.T{a: 1, b: 2} // compile error: can't reference a, b
+var _ = p.T{1, 2}       // compile error: can't reference a, b
+```
+
+- 结构体可以作为函数的参数和返回值，如果考虑效率的话，**较大的结构体通常会用指针的方式传入和返回**
+- **如果要在函数内部修改结构体成员的话，用指针传入是必须的**；因为在Go语言中，**所有的函数参数都是值拷贝传入的，函数参数将不再是函数调用时的原始变量**
+
+```golang
+func AwardAnnualRaise(e *Employee) {
+    e.Salary = e.Salary * 105 / 100
+}
+
+// 结构体一般和指针一起使用，使用这种写法
+pp := &Point{1, 2}
+```
+
+### 结构体比较
+
+- **如果结构体的全部成员都是可以比较的，那么结构体也是可以比较的**，两个结构体将可以使用==或!=运算符进行比较。**比较运算符==将比较两个结构体的每个成员**
+- 可比较的结构体类型和其他可比较的类型一样，可以用于map的key类型
+
+```golang
+type Point struct{ X, Y int }
+
+p := Point{1, 2}
+q := Point{2, 1}
+fmt.Println(p.X == q.X && p.Y == q.Y) // "false"
+fmt.Println(p == q)
+```
+
+### 匿名成员
+
+- 匿名成员:**只声明一个成员对应的数据类型而不指明成员的名字**
+- **匿名成员的数据类型必须是命名的类型或指向一个命名的类型的指针**
+
+```golang
+type Point struct {
+    X int
+    Y int
+}
+
+type Circle struct {
+    Center Point
+    Radius int
+}
+
+type Wheel struct {
+    Circle Circle
+    Spokes int
+}
+
+// 层级明显，但是调用起来特别麻烦
+var w Wheel
+w.Circle.Center.X = 8
+w.Circle.Center.Y = 8
+w.Circle.Radius = 5
+w.Spokes = 20
+```
+
+- 匿名成员Circle和Point都有自己的名字——就是命名的类型名字——但是这些名字在点操作符中是可选的。
+ **我们在访问子成员的时候可以忽略任何匿名成员部分**，其实只是一种语法糖
+
+```golang
+type Point struct {
+    X int
+    Y int
+}
+
+type Circle struct {
+    Point  // 字段名自动为 Point
+    Radius int
+}
+
+type Wheel struct {
+    Circle // 字段名自动为 Circle
+    Spokes int
+}
+
+// 匿名成员的特性
+var w Wheel
+w.X = 8            // equivalent to w.Circle.Point.X = 8
+w.Y = 8            // equivalent to w.Circle.Point.Y = 8
+w.Radius = 5       // equivalent to w.Circle.Radius = 5
+w.Spokes = 20
+```
+
+- **结构体字面值并没有简短表示匿名成员的语法**
+
+```golang
+w = Wheel{8, 8, 5, 20}                       // compile error: unknown fields
+w = Wheel{X: 8, Y: 8, Radius: 5, Spokes: 20} // compile error: unknown fields
+
+w = Wheel{Circle{Point{8, 8}, 5}, 20}
+
+w = Wheel{
+    Circle: Circle{
+        Point:  Point{X: 8, Y: 8},
+        Radius: 5,
+    },
+    // 因为}是另起一行，所以这里必须加上逗号
+    Spokes: 20, // NOTE: trailing comma necessary here (and at Radius)
+}
+```
+
+- **因为匿名成员也有一个隐式的名字，因此不能同时包含两个类型相同的匿名成员，这会导致名字冲突**
+- **因为匿名成员实际上是名字为类型名的成员，所以匿名成员也有可见性的规则约束**
+
+### 匿名类型的方法集
+
+- 简短的点运算符语法可以用于选择匿名成员嵌套的成员，也可以用于访问它们的方法。
+- **外层的结构体不仅仅是获得了匿名成员类型的所有成员，而且也获得了该类型导出的全部的方法。**
+ 这个机制可以用于将一个有简单行为的对象组合成有复杂行为的对象。组合是Go语言中面向对象编程的核心
+
+## JSon
+
+```golang
+//编码
+func Marshal(v interface{}) ([]byte, error)
+func NewEncoder(w io.Writer) *Encoder
+func (enc *Encoder) Encode(v interface{}) error
+
+//解码
+func Unmarshal(data []byte, v interface{}) error
+func NewDecoder(r io.Reader) *Decoder
+func (dec *Decoder) Decode(v interface{}) error
+```
+
+### 编码
+
+- **默认情况下，转义所有公开的成员，私有成员不转义**
+
+```golang
+// Product 商品信息
+type Product struct {
+    Name      string
+    ProductID int64
+    Number    int
+    Price     float64
+    IsOnSale  bool
+}
+
+func main() {
+    p := &Product{}
+    p.Name = "Xiao mi 6"
+    p.IsOnSale = true
+    p.Number = 10000
+    p.Price = 2499.00
+    p.ProductID = 1
+    data, _ := json.Marshal(p)
+    fmt.Println(string(data))
+}
+```
+
+- 编码相关的struct tag
+    - 字段的tag是"-"，那么这个字段不会输出到JSON
+    - tag中带有自定义名称，那么这个自定义名称会出现在JSON的字段名中
+    - tag中如果带有"omitempty"选项，那么如果该字段值为对应的零值，就不会输出到JSON串中
+    - 如果字段类型是bool, string, int, int64等，而tag中带有",string"选项，那么这个字段在输出到JSON的时候会把该字段对应的值转换成JSON字符串
+
+```golang
+type Server struct {
+    ServerID int      `json:"-"`    //不序列化
+    ServerName string `json:"serverName"`  // 名字为小写的serverName
+    ServerIP   string `json:"serverIP,omitempty"` // 如果ServerIP为空的话，不序列化
+    ServerPrice float64 `json:"serverPrice,string"` // 以string的格式序列化float64类型的参数
+}
+
+type Serverslice struct {
+    Servers []Server `json:"servers"`
+}
+```
