golang 复合数据结构

--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -243,13 +243,25 @@ func hasEdge(from, to string) bool {
 
 ## 结构体
 
-## 结构体2
+- **一个命名为S的结构体类型将不能再包含S类型的成员,但是S类型的结构体可以包含*S指针成员**
+- 结构体类型的零值是每个成员都是零值
+- 如果结构体没有任何成员的话就是空结构体，写作struct{}
+
+```golang
+// 使用空结构体构造set，不过一般不这么写
+seen := make(map[string]struct{}) // set of strings
+// ...
+if _, ok := seen[s]; !ok {
+    seen[s] = struct{}{}
+    // ...first time seeing s...
+}
+```
 
 ### 结构体初始化
 
-- 结构体的初始化，**无论哪种方法，如果不在定义结构体的包内部，都没法初始化未导出的值**
+- 结构体的初始化，**无论哪种方法，如果不在定义结构体的包内部，都没法显示初始化未导出的值**
     - 按结构体变量定义的顺序指定**每个变量**的值，只在定义结构体的包内部使用，或者是在较小的结构体中使用
-    - 通过成员名字和相应的值来初始化，未指定使用零值
+    - 通过成员名字和相应的值来初始化，未指定时使用对应类型的零值
 
 ```golang
 type Point struct{ X, Y int }
@@ -268,7 +280,7 @@ var _ = p.T{1, 2}       // compile error: can't reference a, b
 ```
 
 - 结构体可以作为函数的参数和返回值，如果考虑效率的话，**较大的结构体通常会用指针的方式传入和返回**
-- **如果要在函数内部修改结构体成员的话，用指针传入是必须的**；因为在Go语言中，**所有的函数参数都是值拷贝传入的，函数参数将不再是函数调用时的原始变量**
+- **如果要在函数内部修改结构体成员的话，用指针传入是必须的；因为在Go语言中，所有的函数参数都是值拷贝传入的，函数参数将不再是函数调用时的原始变量**
 
 ```golang
 func AwardAnnualRaise(e *Employee) {
@@ -295,7 +307,7 @@ fmt.Println(p == q)
 
 ### 匿名成员
 
-- 匿名成员:**只声明一个成员对应的数据类型而不指明成员的名字**
+- **匿名成员:只声明一个成员对应的数据类型而不指明成员的名字**
 - **匿名成员的数据类型必须是命名的类型或指向一个命名的类型的指针**
 
 ```golang
@@ -349,7 +361,7 @@ w.Radius = 5       // equivalent to w.Circle.Radius = 5
 w.Spokes = 20
 ```
 
-- **结构体字面值并没有简短表示匿名成员的语法**
+- **结构体初始化并没有简短表示匿名成员的语法**
 
 ```golang
 w = Wheel{8, 8, 5, 20}                       // compile error: unknown fields
@@ -417,16 +429,16 @@ func main() {
 ```
 
 - 编码相关的struct tag
-    - 字段的tag是"-"，那么这个字段不会输出到JSON
-    - tag中带有自定义名称，那么这个自定义名称会出现在JSON的字段名中
-    - tag中如果带有"omitempty"选项，那么如果该字段值为对应的零值，就不会输出到JSON串中
-    - 如果字段类型是bool, string, int, int64等，而tag中带有",string"选项，那么这个字段在输出到JSON的时候会把该字段对应的值转换成JSON字符串
+    - **字段的tag是"-"，那么这个字段不会输出到JSON**
+    - **tag中带有自定义名称，那么这个自定义名称会出现在JSON的字段名中**
+    - **tag中如果带有"omitempty"选项，那么如果该字段值为对应的零值(比如int的0,bool的false)，就不会输出到JSON串中**
+    - **如果字段类型是bool, string, int, int64等，而tag中带有",string"选项，那么这个字段在输出到JSON的时候会把该字段对应的值转换成JSON字符串**
 
 ```golang
 type Server struct {
     ServerID int      `json:"-"`    //不序列化
     ServerName string `json:"serverName"`  // 名字为小写的serverName
-    ServerIP   string `json:"serverIP,omitempty"` // 如果ServerIP为空的话，不序列化
+    ServerIP   string `json:"serverIP,omitempty"` // 如果ServerIP为空字符串的话，不序列化
     ServerPrice float64 `json:"serverPrice,string"` // 以string的格式序列化float64类型的参数
 }
 
