--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -391,10 +391,7 @@ w = Wheel{
 ## JSon
 
 ```golang
-//编码
-func Marshal(v interface{}) ([]byte, error)
-func NewEncoder(w io.Writer) *Encoder
-func (enc *Encoder) Encode(v interface{}) error
+
 
 //解码
 func Unmarshal(data []byte, v interface{}) error
@@ -404,29 +401,20 @@ func (dec *Decoder) Decode(v interface{}) error
 
 ### 编码
 
-- **默认情况下，转义所有公开的成员，私有成员不转义**
-
 ```golang
-// Product 商品信息
-type Product struct {
-    Name      string
-    ProductID int64
-    Number    int
-    Price     float64
-    IsOnSale  bool
-}
-
-func main() {
-    p := &Product{}
-    p.Name = "Xiao mi 6"
-    p.IsOnSale = true
-    p.Number = 10000
-    p.Price = 2499.00
-    p.ProductID = 1
-    data, _ := json.Marshal(p)
-    fmt.Println(string(data))
-}
+//编码
+func Marshal(v interface{}) ([]byte, error)
+func NewEncoder(w io.Writer) *Encoder
+func (enc *Encoder) Encode(v interface{}) error
 ```
+
+- **默认情况下，编码所有公开的成员，私有成员不编码,因此如果想json中的字段名是小写，必须通过tag**
+- Marshal函数只有在转换成功的时候才会返回数据，在转换的过程中我们需要注意几点：
+    - JSON对象只支持string作为key，所以要编码一个map，那么必须是map[string]T这种类型(T是Go语言中任意的类型)
+    - Channel, complex和function是不能被编码成JSON的
+    - 嵌套的数据是不能编码的，不然会让JSON编码进入死循环
+    - 指针在编码的时候会输出指针指向的内容，而空指针会输出null
+
 
 - 编码相关的struct tag
     - **字段的tag是"-"，那么这个字段不会输出到JSON**
@@ -442,7 +430,20 @@ type Server struct {
     ServerPrice float64 `json:"serverPrice,string"` // 以string的格式序列化float64类型的参数
 }
 
-type Serverslice struct {
-    Servers []Server `json:"servers"`
+server1 := Server{1, "server1", "192.168.1.1",100}
+s1, err := json.Marshal(server1)
+if err != nil {
+    fmt.Printf("marshal json failed, reason=%v\n", err)
+} else {
+    fmt.Println(utils.PrettyJson(s1))
+}
+
+func PrettyJson(input []byte) string {
+    var out bytes.Buffer
+    if err := json.Indent(&out, input, "", "  "); err != nil {
+        return fmt.Sprintf("pretty json failed, reason:%v\n", err)
+    }
+    return out.String()
 }
 ```
+
