--- a/golang/go基础/05_方法.md
+++ b/golang/go基础/05_方法.md
@@ -3,6 +3,7 @@
 ## 方法声明
 
 - 在函数声明时，在其名字之前放上一个变量，即是一个方法。这个附加的参数会将该函数附加到这种类型上，即相当于为这种类型定义了一个独占的方法。
+- 函数和方法的区别是指有没有接收器，而不像其他语言那样是指有没有返回值。
 
 ```golang
 package geometry
@@ -205,7 +206,78 @@ type responseWriter struct {
 }
 
 type gzipResponseWriterstruct {
-    io.Writer 
+    io.Writer
     responseWriter
+}
+```
+
+## 方法值和方法表达式
+
+- **当调用一个方法时**，与调用一个普通的函数相比，**我们必须要用选择器(p.Distance)语法来指定方法的接收器**
+- p.Distance叫作“选择器”，选择器会返回一个**方法"值"->一个将方法(Point.Distance)绑定到特定接收器变量的函数**
+
+```golang
+p := Point{1, 2}
+q := Point{4, 6}
+
+distanceFromP := p.Distance        // method value
+fmt.Println(distanceFromP(q))      // "5"
+var origin Point                   // {0, 0}
+fmt.Println(distanceFromP(origin)) // "2.23606797749979", sqrt(5)
+
+scaleP := p.ScaleBy // method value
+scaleP(2)           // p becomes (2, 4)
+scaleP(3)           // then (6, 12)
+scaleP(10)
+```
+
+```golang
+type Rocket struct { /* ... */ }
+func (r *Rocket) Launch() { /* ... */ }
+r := new(Rocket)
+time.AfterFunc(10 * time.Second, func() { r.Launch() })
+// 使用方法值
+time.AfterFunc(10 * time.Second, r.Launch)
+```
+
+- **当T是一个类型时，方法表达式可能会写作T.f或者(*T).f，会返回一个方法表达式，这种函数会将其第一个参数用作接收器，后面紧跟原方法的参数，可以用不写选择器的方式来对其进行调用**
+
+```golang
+p := Point{1, 2}
+q := Point{4, 6}
+
+distance := Point.Distance   // method expression
+fmt.Println(distance(p, q))  // "5"
+fmt.Printf("%T\n", distance) // "func(Point, Point) float64"
+
+scale := (*Point).ScaleBy
+scale(&p, 2)
+fmt.Println(p)            // "{2 4}"
+fmt.Printf("%T\n", scale) // "func(*Point, float64)"
+
+// 这个Distance实际上是指定了Point对象为接收器的一个方法func (p Point) Distance()，
+// 通过Point.Distance得到的函数需要比实际的Distance方法多一个参数，
+// 即其需要用第一个额外参数指定接收器，后面排列Distance方法的参数。
+```
+
+```golang
+type Point struct{ X, Y float64 }
+
+func (p Point) Add(q Point) Point { return Point{p.X + q.X, p.Y + q.Y} }
+func (p Point) Sub(q Point) Point { return Point{p.X - q.X, p.Y - q.Y} }
+
+type Path []Point
+
+func (path Path) TranslateBy(offset Point, add bool) {
+    var op func(p, q Point) Point
+    if add {
+        op = Point.Add
+    } else {
+        op = Point.Sub
+    }
+    for i := range path {
+        // Call either path[i].Add(offset) or path[i].Sub(offset).
+        path[i] = op(path[i], offset)
+    }
 }
 ```
