--- a/golang/go基础/05_方法.md
+++ b/golang/go基础/05_方法.md
@@ -3,7 +3,7 @@
 ## 方法声明
 
 - 在函数声明时，在其名字之前放上一个变量，即是一个方法。这个附加的参数会将该函数附加到这种类型上，即相当于为这种类型定义了一个独占的方法。
-- 函数和方法的区别是指有没有接收器，而不像其他语言那样是指有没有返回值。
+- **函数和方法的区别是指有没有接收器**，而不像其他语言那样是指有没有返回值。
 
 ```golang
 package geometry
@@ -60,7 +60,9 @@ func (p *Point) ScaleBy(factor float64) {
 ```
 
 - 在现实的程序里，**一般会约定如果Point这个类有一个指针作为接收器的方法，那么所有Point的方法都必须有一个指针接收器**，即使是那些并不需要这个指针接收器的函数
-
+- 对于每一个命名过的具体类型T；它一些方法的接收者是类型T本身然而另一些则是一个*T的指针。在T类型的参数上调用一个*T的方法是合法的，只要这个参数是一个变量；编译器隐式的获取了它的地址。
+ 
+ 但这仅仅是一个语法糖：T类型的值不拥有所有*T指针的方法，那这样它就可能只实现更少的接口
 - **不管你的方法的接受器是指针类型还是非指针类型，都是可以通过指针/非指针类型进行调用的，编译器会帮你做类型转换**
 
 ```golang
