基于共享变量的并发

--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -1,5 +1,17 @@
 # 复合数据类型
 
+- [数组](#数组)
+- [Slice](#slice)
+    - [append函数](#append函数)
+- [Map](#map)
+- [结构体](#结构体)
+    - [结构体初始化](#结构体初始化)
+    - [结构体比较](#结构体比较)
+    - [匿名成员](#匿名成员)
+    - [匿名类型的方法集](#匿名类型的方法集)
+- [JSon](#json)
+    - [编码](#编码)
+
 ## 数组
 
 - **如果在数组的长度位置出现的是“...”省略号，则表示数组的长度是根据初始化值的个数来计算**
