--- a/golang/go基础/05_方法.md
+++ b/golang/go基础/05_方法.md
@@ -1,5 +1,11 @@
 # 方法
 
+- [方法声明](#方法声明)
+- [基于指针对象的方法](#基于指针对象的方法)
+- [通过嵌入结构体来扩展类型](#通过嵌入结构体来扩展类型)
+    - [匿名字段暴露方法的优先级](#匿名字段暴露方法的优先级)
+- [方法值和方法表达式](#方法值和方法表达式)
+
 ## 方法声明
 
 - 在函数声明时，在其名字之前放上一个变量，即是一个方法。这个附加的参数会将该函数附加到这种类型上，即相当于为这种类型定义了一个独占的方法。
