--- a/golang/go基础/02_基础数据类型.md
+++ b/golang/go基础/02_基础数据类型.md
@@ -8,6 +8,10 @@
     - [字符串字面值](#字符串字面值)
     - [unicode](#unicode)
     - [相关系统库](#相关系统库)
+    - [字符串与数字](#字符串与数字)
+- [常量](#常量)
+    - [iota](#iota)
+    - [无类型的常量](#无类型的常量)
 
 ## 整型
 
