--- a/golang/go基础/04_函数.md
+++ b/golang/go基础/04_函数.md
@@ -1,5 +1,21 @@
 # 函数
 
+- [错误处理](#错误处理)
+    - [错误传递](#错误传递)
+    - [重新尝试](#重新尝试)
+    - [输出错误信息并结束程序](#输出错误信息并结束程序)
+    - [仅输出错误信息](#仅输出错误信息)
+    - [忽略错误](#忽略错误)
+    - [EOF](#eof)
+- [函数值](#函数值)
+- [匿名函数](#匿名函数)
+    - [捕获迭代变量](#捕获迭代变量)
+    - [可变参数函数](#可变参数函数)
+    - [defer](#defer)
+        - [defer理解的注意点](#defer理解的注意点)
+    - [Panic](#panic)
+- [Recover](#recover)
+
 ```golang
 func name(parameter-list) (result-list) {
     body
