--- a/golang/go基础/06-接口.md
+++ b/golang/go基础/06-接口.md
@@ -1,5 +1,10 @@
 # 接口
 
+- [实现接口](#实现接口)
+- [接口值](#接口值)
+- [类型转换](#类型转换)
+    - [Comma-ok断言](#comma-ok断言)
+
 - **接口是合约，接口类型具体描述了一系列方法的集合**，一个实现了这些方法的具体类型是这个接口类型的实例。
 - 接口内嵌,与语法和结构内嵌相似
 
@@ -65,8 +70,7 @@ var c = datastruct.Person{Name: "Keylen", ID: "3"}.String()
 fmt.Println(c)
 ```
 
-- 在T类型变量上调用接受器为*T的方法仅是一个语法糖，**T类型的值不拥有所有*T指针的方法**，那这样它就可能只实现更少的接口。
-- **上面的例子中，*Person才是fmt.Stringer接口类型，Person并不是fmt.Stringer类型**
+- **在T类型变量上调用接受器为*T的方法仅是一个语法糖，T类型的值不拥有所有*T指针的方法，那这样它就可能只实现更少的接口**,上面的例子中，*Person才是fmt.Stringer接口类型，Person并不是fmt.Stringer类型
 
 ```golang
 luke := datastruct.Person{Name: "Luke", ID: "1"}
@@ -145,4 +149,34 @@ if debug {
     buf = new(bytes.Buffer) // enable collection of output
 }
 f(buf) // OK
+```
+
+## 类型转换
+
+- **普通类型向接口类型的转换是隐式的，接口类型向普通类型转换需要类型断言**
+- **由于interface{}包含了0个方法，所以任何类型都实现了interface{}接口**
+
+### Comma-ok断言
+
+- 语法：**value, ok := element.(T)**。element必须是接口类型的变量，T是普通类型。如果断言失败，ok为false，否则ok为true并且value为变量的值
+- Comma-ok断言还支持另一种简化使用的方式：**value := element.(T)。但这种方式不建议使用，因为一旦element.(T)断言失败，则会产生运行时错误**
+
+```golang
+type Html []interface{}
+
+func main() {
+    html := make(Html, 5)
+    html[0] = "div"
+    html[1] = "span"
+    html[2] = []byte("script")
+    html[3] = "style"
+    html[4] = "head"
+    for index, element := range html {
+        if value, ok := element.(string); ok {
+            fmt.Printf("html[%d] is a string and its value is %s\n", index, value)
+        } else if value, ok := element.([]byte); ok {
+            fmt.Printf("html[%d] is a []byte and its value is %s\n", index, string(value))
+        }
+    }
+}
 ```
