--- a/golang/go基础/06-接口.md
+++ b/golang/go基础/06-接口.md
@@ -180,3 +180,25 @@ func main() {
     }
 }
 ```
+
+### switch语法
+
+```golang
+func sqlQuote(x interface{}) string {
+    switch x := x.(type) {
+    case nil:
+        return "NULL"
+    case int, uint:
+        return fmt.Sprintf("%d", x) // x has type interface{} here.
+    case bool:
+        if x {
+            return "TRUE"
+        }
+        return "FALSE"
+    case string:
+        return sqlQuoteString(x) // (not shown)
+    default:
+        panic(fmt.Sprintf("unexpected type %T: %v", x, x))
+    }
+}
+```
