--- a/golang/go基础/01_程序结构.md
+++ b/golang/go基础/01_程序结构.md
@@ -281,3 +281,20 @@ if num := 9; num < 0 {
     fmt.Println(num, "has multiple digits")
 }
 ```
+
+### switch
+
+- **switch语句除非以 fallthrough 语句结束，否则分支会自动终止**
+- 没有条件的 switch 同 `switch true` 一样，这一构造使得可以用更清晰的形式来编写长的 if-then-else 链
+
+```golang
+t := time.Now()
+switch {
+case t.Hour() < 12:
+    fmt.Println("Good morning!")
+case t.Hour() < 17:
+    fmt.Println("Good afternoon.")
+default:
+    fmt.Println("Good evening.")
+}
+```
