--- a/golang/go基础/02_基础数据类型.md
+++ b/golang/go基础/02_基础数据类型.md
@@ -154,6 +154,7 @@ func itob(i int) bool { return i != 0 }
 
 ```golang
 s := "hello, world"
+fmt.Printf("%q\n", s)  // 会打印出引号， "hello, world"
 fmt.Println(s[0:5])  //// "hello"
 
 fmt.Println(s[:5]) // "hello"
