--- a/golang/go基础/04_函数.md
+++ b/golang/go基础/04_函数.md
@@ -386,7 +386,7 @@ func trace(msg string) func() {
     - 返回值 = xxx
     - 调用defer函数
     - 空的return
-- 所以如果要通过defer修改return xxx的值，返回值必须是一个具名返回值，并且在defer中修改具名返回值
+- **所以如果要通过defer修改return xxx的值，返回值必须是一个具名返回值，并且在defer中修改具名返回值**
 
 ```golang
 func f() (result int) {
@@ -443,6 +443,46 @@ func f() (r int) {
     }(r)
     return //空的return
 }
+```
+
+- **defer调用的参数会立刻生成**，但是在上层函数返回前函数都不会被调用
+
+```golang
+func testDefer2() {
+    a := 1
+    // defer虽然会在函数才会返回，但是调用的参数实际上是在定义时就生成的
+    defer func(a int) {
+        a++
+        fmt.Println("defer:", a)
+    }(a)
+    a = 2
+    fmt.Println(a)
+}
+
+//输出
+//2
+//defer: 2
+```
+
+- **延迟的函数调用被压入一个栈中。当函数返回时， 会按照后进先出的顺序调用被延迟的函数调用**
+
+```golang
+func testDefer3() {
+    fmt.Println("counting")
+
+    for i := 0; i < 3; i++ {
+        defer fmt.Println(i)
+    }
+
+    fmt.Println("done")
+}
+
+testDefer3()
+//counting
+//done
+2
+1
+0
 ```
 
 ### Panic
