the go programming language

--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -128,6 +128,49 @@ x = append(x, x...)
 fmt.Println(x)
 ```
 
+- slice的增删改查
+
+```golang
+//删除
+func remove(slice []interface{}, i int) []interface{} {
+    return append(slice[:i], slice[i+1:]...)
+}
+
+//新增
+func add(slice []interface{}, value interface{}) []interface{} {
+    return append(slice, value)
+}
+
+//插入
+func insert(slice *[]interface{}, index int, value interface{}) {
+    rear := append([]interface{}{}, (*slice)[index:]...)
+    *slice = append(append((*slice)[:index], value), rear...)
+}
+
+//修改
+func update(slice []interface{}, index int, value interface{}) {
+    slice[index] = value
+}
+
+//查找
+func find(slice []interface{}, index int) interface{} {
+    return slice[index]
+}
+
+//清空slice
+func empty(slice *[]interface{}) {
+    //    *slice = nil
+    *slice = append([]interface{}{})
+}
+
+//遍历
+func list(slice []interface{}) {
+    for _, v := range slice {
+        fmt.Printf("%d ", v)
+    }
+}
+```
+
 ## Map
 
 - map[K]V, **K必须支持==比较运算符，V可以为任何类型**
@@ -139,6 +182,10 @@ fmt.Println(x)
 ```golang
 
 var ages map[string]int  // nil
+fmt.Println(ages == nil) //true
+
+_, ok := ages["test"]    // 查找工作对于nil的map仍然正常工作
+fmt.Println("test", ok)
 
 ages := make(map[string]int)  // 空map
 ages := map[string]int{} // 空map
