--- a/golang/go基础/02_基础数据类型.md
+++ b/golang/go基础/02_基础数据类型.md
@@ -21,7 +21,7 @@
 - **byte与uint8等价**
 - int,uint与平台有关，有可能是32位，也可能是64位
 - **uintptr也是一种整型，没有指定具体的bit大小但是足以容纳指针**
-- 位清空运算符**&^**,如果对应y中bit位为1的话, 表达式z = x &^ y结果z的对应的bit位为0，否则z对应的bit位等于x相应的bit位的值
+- **位清空运算符&^,如果对应y中bit位为1的话, 表达式z = x &^ y结果z的对应的bit位为0，否则z对应的bit位等于x相应的bit位的值**
 - **len()函数返回是int类型，带有符号位的**
 - 格式化输出
     - %b二进制，%d十进制，%o八进制，%x十六进制
@@ -92,7 +92,8 @@ fmt.Println(math.Inf(1), math.Inf(-1))
 // +Inf -Inf
 ```
 
-- 如果一个函数返回的浮点数结果可能失败，最好的做法是用单独的标志报告失败
+- 如果一个函数返回的浮点数结果可能失败，最好的做法是用单独的标志报告失败,
+ 因为float的比较可能有误差
 
 ```golang
 func compute() (value float64, ok bool) {
@@ -114,7 +115,7 @@ var x complex128 = complex(1, 2) // 1+2i
 var y complex128 = complex(3, 4) // 3+4i
 fmt.Println(x*y)                 // "(-5+10i)"
 fmt.Println(real(x*y))           // "-5"
-fmt.Println(imag(x*y))  
+fmt.Println(imag(x*y))
 ```
 
 - **math/cmplx包提供了复数处理的许多函数**，例如求复数的平方根函数和求幂函数
@@ -150,7 +151,7 @@ func itob(i int) bool { return i != 0 }
 - **一个字符串是一个不可改变的字节序列**
 - **内置的len函数可以返回一个字符串中的字节数目，不是rune字符数目**
 - 子字符串操作s[i:j]基于原始的s字符串的第i个字节开始到第j个字节（并不包含j本身）生成一个新字符串
-- 管i还是j都可能被忽略，当它们被忽略时将采用0作为开始位置，采用len(s)作为结束的位置
+ 不管i还是j都可能被忽略，当它们被忽略时将采用0作为开始位置，采用len(s)作为结束的位置
 
 ```golang
 s := "hello, world"
@@ -162,6 +163,15 @@ fmt.Println(s[7:]) // "world"
 fmt.Println(s[:])  // "hello, world"
 ```
 
+- **连接跨行字符串时，"+" 必须在上一行末尾，否则导致编译错误**
+
+```golang
+s := "Hello, " +
+     "World!"
+s2 := "Hello, "
+    + "World!"    // Error: invalid operation: + untyped string
+```
+
 - **因为字符串是不可修改的，因此尝试修改字符串内部数据的操作也是被禁止的**
 
 ```golang
@@ -169,7 +179,8 @@ s[0] = 'L' // compile error: cannot assign to s[0]
 ```
 
 - 不变性意味如果两个字符串共享相同的底层数据的话也是安全的，这使得**复制任何长度的字符串代价是低廉的**。
-- 同样，**一个字符串s和对应的子字符串切片s[7:]的操作也可以安全地共享相同的内存，因此字符串切片操作代价也是低廉的**。在这两种情况下都没有必要分配新的内存
+- **一个字符串s和对应的子字符串切片s[7:]的操作也可以安全地共享相同的内存，因此字符串切片操作代价也是低廉的**。在这两种情况下都没有必要分配新的内存
+- 要修改字符串，可先将其转换成 []rune 或 []byte，完成后再转换为 string。 论哪种转 换，都会重新分配内存，并复制字节数组
 
 ### 字符串字面值
 
@@ -442,6 +453,28 @@ const (
     EiB // 1152921504606846976
     ZiB // 1180591620717411303424    (exceeds 1 << 64)
     YiB // 1208925819614629174706176
+)
+```
+
+- **在同一常量组中，可以提供多个iota，它们各自增长**
+
+```golang
+const (
+A,B=iota,iota<<10    //0,0<<10
+C,D                 // 1, 1 << 10
+)
+```
+
+- 如果iota自增被打断，须显式恢复
+
+```golang
+const (
+    A = iota  // 0
+    B         // 1
+    C = "c"   // "c"
+    D         // "c",与上一行相同
+    E = iota  // 4，显示恢复，计数包含了C,D两项
+    F         // 5
 )
 ```
 
