--- a/golang/go基础/01_程序结构.md
+++ b/golang/go基础/01_程序结构.md
@@ -298,3 +298,40 @@ default:
     fmt.Println("Good evening.")
 }
 ```
+
+### Goto, Break, Continue
+
+- **⽀持在函数内 goto 跳转。标签名区分⼤⼩写，未使⽤标签引发错误**
+
+```golang
+func main() {
+    var i int
+    for {
+        println(i)
+        i++
+        if i > 2 { goto BREAK }
+    }
+
+BREAK:
+    println("break")
+
+    EXIT: // Error: label EXIT defined and not used
+}
+```
+
+- **配合标签，break 和 continue 可在多级嵌套循环中跳出**
+
+```golang
+func main() {
+L1:
+    for x := 0; x < 3; x++ {
+L2:
+        for y := 0; y < 5; y++ {
+            if y > 2 { continue L2 }
+            if x > 1 { break L1 }
+            print(x, ":", y, " ")
+        }
+        println()
+    }
+}
+```
