--- a/golang/go基础/04_函数.md
+++ b/golang/go基础/04_函数.md
@@ -23,6 +23,7 @@ func name(parameter-list) (result-list) {
 ```
 
 - Go语言使用可变栈，栈的大小按需增加(初始时很小)。这使得我们使用递归时不必考虑溢出和安全问题
+- **Go语言中不支持函数重载，也不支持默认参数**
 
 - **Go语言的函数可以有多个返回值**
 
@@ -83,6 +84,20 @@ func CountWordsAndImages(url string) (words, images int, err error) {
     words, images = countWordsAndImages(doc)
     // 相当于return words, images, nil
     return
+}
+```
+
+- **不能⽤容器对象接收多返回值。只能⽤多个变量，或 "_" 忽略**
+
+```golang
+func test() (int, int) {
+    return 1, 2
+}
+func main() {
+    // s := make([]int, 2)
+    // s = test() // Error: multiple-value test() in single-value context
+    x, _ := test()
+    println(x)
 }
 ```
 
