--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -14,6 +14,8 @@
 
 ## 数组
 
+- **数组是值类型，赋值和传参会复制整个数组，⽽不是指针**
+- **指针数组 [n]*T，数组指针 *[n]T**
 - **如果在数组的长度位置出现的是“...”省略号，则表示数组的长度是根据初始化值的个数来计算**
 - **数组的初始化还可以用键值对的形式**，这样初始化的顺序就没有关系了
 
@@ -38,10 +40,19 @@ func zero(ptr *[32]byte) {
 
 ## Slice
 
-- Slice（切片）代表变长的序列，一般写作[]T，slice的语法和数组很像，只是没有固定长度而已
+```golang
+// runtime/slice.go
+type slice struct {
+    array unsafe.Pointer
+    len   int
+    cap   int
+}
+```
+
+- slice 并不是数组或数组指针。它通过内部指针和相关属性引⽤数组⽚段，以实现变⻓⽅案
 - 一个slice由三个部分构成：指针、长度和容量。
     - **指针指向第一个slice元素对应的底层数组元素的地址**，要注意的是slice的第一个元素并不一定就是数组的第一个元素。
-    - **容量一般是从slice的开始位置到底层数据的结尾位置，是有可能小于底层数组的容量的**
+    - **容量一般是从slice的开始位置到底层数据的结尾位置，是有可能小于底层数组的容量的，因为指针有可能并不是数组的第一个元素**
     - **长度对应slice中元素的数目**；长度不能超过容量。内置的len和cap函数分别返回slice的长度和容量。
 
 ```golang
@@ -58,6 +69,11 @@ a := make([]int, 10, 20)
 fmt.Printf("cap = %d\n", cap(a)) // cap = 20
 b := a[10:]
 fmt.Printf("cap = %d\n", cap(b)) // cap = 10，这里并不是20
+
+// 还可⽤指针直接访问底层数组，退化成普通数组操作
+s := []int{0, 1, 2, 3}
+p := &s[2] // *int, 获取底层数组元素指针。
+*p += 100
 ```
 
 - **slice之间不能比较,slice唯一合法的比较操作是和nil比较**，不能使用==操作符来判断两个slice是否含有全部相等元素。
@@ -74,6 +90,16 @@ func equal(x, y []string) bool {
         }
     }
     return true
+}
+```
+
+- [][]T，是指元素类型为 []T,每一个[]T的元素的数目是可以不同的,相当于java中list的list
+
+```golang
+data := [][]int{
+ []int{1, 2, 3},
+ []int{100, 200},
+ []int{11, 22, 33, 44},
 }
 ```
 
@@ -101,16 +127,14 @@ func AppendInt(x []int, y int) []int {
 }
 ```
 
-- **通常我们并不知道append调用是否导致了内存的重新分配**
-- **因此我们也不能确认新的slice和原始的slice是否引用的是相同的底层数组空间**
+- **通常我们并不知道append调用是否导致了内存的重新分配,因此我们也不能确认新的slice和原始的slice是否引用的是相同的底层数组空间**
 - **我们不能确认在原先的slice上的操作是否会影响到新的slice,通常是将append返回的结果直接赋值给输入的slice变量**
+- **更新slice变量不仅对调用append函数是必要的，实际上对应任何可能导致长度、容量或底层数组变化的操作都是必要的。**
+- **要正确地使用slice，需要记住尽管底层数组的元素是间接访问的，但是slice对应结构体本身的指针、长度和容量部分是直接访问的。要更新这些信息需要像上面例子那样一个显式的赋值操作**
 
 ```golang
 runes = append(runes, r)
 ```
-
-- **更新slice变量不仅对调用append函数是必要的，实际上对应任何可能导致长度、容量或底层数组变化的操作都是必要的。**
-- **要正确地使用slice，需要记住尽管底层数组的元素是间接访问的，但是slice对应结构体本身的指针、长度和容量部分是直接访问的。要更新这些信息需要像上面例子那样一个显式的赋值操作**
 
 - 内置的append函数则可以追加多个元素，甚至追加一个slice
 
@@ -128,7 +152,37 @@ x = append(x, x...)
 fmt.Println(x)
 ```
 
-- slice的增删改查
+### copy函数
+
+- 函数 copy 在两个 slice 间复制数据，**复制⻓度以 len ⼩的为准，也就是说dst的len可以比src小也可以比src大**
+- 两个 slice 可指向同⼀底层数组，允许元素区间重叠
+
+```golang
+data := [...]int{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}
+s1 := data[8:]
+s2 := data[:5]
+copy(s2, s1) // dst:s2, src:s
+fmt.Println(s1)
+fmt.Println(s2)
+fmt.Println(data)
+
+data1 := [...]int{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}
+s3 := data1[8:]
+s4 := data1[:5]
+copy(s3, s4) // dst:s2, src:s
+fmt.Println(s3)
+fmt.Println(s4)
+fmt.Println(data1)
+
+//[8 9]
+//[8 9 2 3 4]
+//[8 9 2 3 4 5 6 7 8 9]
+//[0 1]
+//[0 1 2 3 4]
+//[0 1 2 3 4 5 6 7 0 1]
+```
+
+### slice的增删改查
 
 ```golang
 //删除
