--- a/golang/go基础/04_函数.md
+++ b/golang/go基础/04_函数.md
@@ -1,5 +1,12 @@
 # 函数
 
+- [函数值](#函数值)
+- [多返回值](#多返回值)
+- [闭包](#闭包)
+    - [捕获迭代变量](#捕获迭代变量)
+    - [可变参数函数](#可变参数函数)
+    - [defer](#defer)
+        - [defer理解的注意点](#defer理解的注意点)
 - [错误处理](#错误处理)
     - [错误传递](#错误传递)
     - [重新尝试](#重新尝试)
@@ -7,12 +14,6 @@
     - [仅输出错误信息](#仅输出错误信息)
     - [忽略错误](#忽略错误)
     - [EOF](#eof)
-- [函数值](#函数值)
-- [匿名函数](#匿名函数)
-    - [捕获迭代变量](#捕获迭代变量)
-    - [可变参数函数](#可变参数函数)
-    - [defer](#defer)
-        - [defer理解的注意点](#defer理解的注意点)
     - [Panic](#panic)
 - [Recover](#recover)
 
@@ -24,6 +25,29 @@ func name(parameter-list) (result-list) {
 
 - Go语言使用可变栈，栈的大小按需增加(初始时很小)。这使得我们使用递归时不必考虑溢出和安全问题
 - **Go语言中不支持函数重载，也不支持默认参数**
+
+## 函数值
+
+- **在Go中，函数被看作第一类值（first-class values）**：函数像其他值一样，拥有类型，可以被赋值给其他变量，传递给函数，从函数返回
+- 函数类型的零值是nil
+- 函数值之间是不可比较的，也不能用函数值作为map的key
+
+```golang
+func square(n int) int { return n * n }
+func negative(n int) int { return -n }
+func product(m, n int) int { return m * n }
+
+f := square
+fmt.Println(f(3)) // "9"
+
+f = negative
+fmt.Println(f(3))     // "-3"
+fmt.Printf("%T\n", f) // "func(int) int"
+
+f = product // compile error: can't assign func(int, int) int to func(int) int
+```
+
+## 多返回值
 
 - **Go语言的函数可以有多个返回值**
 
@@ -101,140 +125,9 @@ func main() {
 }
 ```
 
-## 错误处理
+## 闭包
 
-### 错误传递
-
-- 函数中某个子程序的失败，会变成该函数的失败
-- 有些错误则要将错误包装再返回，被调函数f(x)会将调用信息和参数信息作为发生错误时的上下文放在错误信息中并返回给调用者，调用者需要添加一些错误信息中不包含的信息，比如添加url到html.Parse返回的错误中
-
-```golang
-resp, err := http.Get(url)
-if err != nil{
-    return nil, err
-}
-
-// 包装上下文
-doc, err := html.Parse(resp.Body)
-resp.Body.Close()
-if err != nil {
-    return nil, fmt.Errorf("parsing %s as HTML: %v", url,err)
-}
-```
-
-### 重新尝试
-
-- 如果错误的发生是偶然的，或由不可预知的问题导致的。一个明智的选择是重新尝试失败的作。
-- **在重试时，我们需要限制重试的时间间隔或重试的次数，防止无限制的重试。**
-
-```golang
-func WaitForServer(url string) error {
-    const timeout = 1 * time.Minute
-    deadline := time.Now().Add(timeout)
-    for tries := 0; time.Now().Before(deadline); tries++ {
-        _, err := http.Head(url)
-        if err == nil {
-            return nil // success
-        }
-        log.Printf("server not responding (%s);retrying…", err)
-        time.Sleep(time.Second << uint(tries)) // exponential back-off
-    }
-    return fmt.Errorf("server %s failed to respond after %s", url, timeout)
-}
-```
-
-### 输出错误信息并结束程序
-
-- 这种策略只应在main中执行。对库函数而言，应仅向上传播错误
-- 调用log.Fatalf可以更简洁的代码达到与上文相同的效果。log中的所有函数，都默认会在错误信息之前输出时间信
-
-```golang
-// (In function main.)
-if err := WaitForServer(url); err != nil {
-    fmt.Fprintf(os.Stderr, "Site is down: %v\n", err)
-    os.Exit(1)
-}
-```
-
-### 仅输出错误信息
-
-- 有时，我们只需要输出错误信息就足够了，不需要中断程序的运行
-- 我们可以通过log包提供函数或者标准错误流输出错误信息
-
-```golang
-if err := Ping(); err != nil {
-    log.Printf("ping failed: %v; networking disabled",err)
-}
-
-if err := Ping(); err != nil {
-    fmt.Fprintf(os.Stderr, "ping failed: %v; networking disabled\n", err)
-}
-```
-
-### 忽略错误
-
-```golang
-dir, err := ioutil.TempDir("", "scratch")
-if err != nil {
-    return fmt.Errorf("failed to create temp dir: %v",err)
-}
-// ...use temp dir…
-os.RemoveAll(dir) // ignore errors; $TMPDIR is cleaned periodically
-```
-
-- **在Go中，检查某个子函数是否失败后，我们通常将处理失败的逻辑代码放在处理成功的代码之前**
-- **如果某个错误会导致函数返回，那么成功时的逻辑代码不应放在else语句块中，而应直接放在函数体中。**
-- **Go中大部分函数的代码结构几乎相同，首先是一系列的初始检查，防止错误发生，之后是函数的实际逻辑**
-
-### EOF
-
-- io包保证任何由文件结束引起的读取失败都返回同一个错误——io.EOF
-
-```golang
-package io
-
-import "errors"
-
-// EOF is the error returned by Read when no more input is available.
-var EOF = errors.New("EOF")
-
-in := bufio.NewReader(os.Stdin)
-for {
-    r, _, err := in.ReadRune()
-    if err == io.EOF {
-        break // finished reading
-    }
-    if err != nil {
-        return fmt.Errorf("read failed:%v", err)
-    }
-    // ...use r…
-}
-```
-
-## 函数值
-
-- **在Go中，函数被看作第一类值（first-class values）**：函数像其他值一样，拥有类型，可以被赋值给其他变量，传递给函数，从函数返回
-- 函数类型的零值是nil
-- 函数值之间是不可比较的，也不能用函数值作为map的key
-
-```golang
-func square(n int) int { return n * n }
-func negative(n int) int { return -n }
-func product(m, n int) int { return m * n }
-
-f := square
-fmt.Println(f(3)) // "9"
-
-f = negative
-fmt.Println(f(3))     // "-3"
-fmt.Printf("%T\n", f) // "func(int) int"
-
-f = product // compile error: can't assign func(int, int) int to func(int) int
-```
-
-## 匿名函数
-
-- 匿名函数可以访问完整的词法环境（lexical environment），这意味着**在函数中定义的内部函数可以引用该函数的变量**
+- 匿名函数可以访问完整的词法环境（lexical environment），这意味着**在函数中定义的内部函数可以引用该函数的局部变量**
 
 ```golang
 // squares返回一个匿名函数。
@@ -498,6 +391,116 @@ testDefer3()
 2
 1
 0
+```
+
+## 错误处理
+
+### 错误传递
+
+- 函数中某个子程序的失败，会变成该函数的失败
+- 有些错误则要将错误包装再返回，被调函数f(x)会将调用信息和参数信息作为发生错误时的上下文放在错误信息中并返回给调用者，调用者需要添加一些错误信息中不包含的信息，比如添加url到html.Parse返回的错误中
+
+```golang
+resp, err := http.Get(url)
+if err != nil{
+    return nil, err
+}
+
+// 包装上下文
+doc, err := html.Parse(resp.Body)
+resp.Body.Close()
+if err != nil {
+    return nil, fmt.Errorf("parsing %s as HTML: %v", url,err)
+}
+```
+
+### 重新尝试
+
+- 如果错误的发生是偶然的，或由不可预知的问题导致的。一个明智的选择是重新尝试失败的作。
+- **在重试时，我们需要限制重试的时间间隔或重试的次数，防止无限制的重试。**
+
+```golang
+func WaitForServer(url string) error {
+    const timeout = 1 * time.Minute
+    deadline := time.Now().Add(timeout)
+    for tries := 0; time.Now().Before(deadline); tries++ {
+        _, err := http.Head(url)
+        if err == nil {
+            return nil // success
+        }
+        log.Printf("server not responding (%s);retrying…", err)
+        time.Sleep(time.Second << uint(tries)) // exponential back-off
+    }
+    return fmt.Errorf("server %s failed to respond after %s", url, timeout)
+}
+```
+
+### 输出错误信息并结束程序
+
+- 这种策略只应在main中执行。对库函数而言，应仅向上传播错误
+- 调用log.Fatalf可以更简洁的代码达到与上文相同的效果。log中的所有函数，都默认会在错误信息之前输出时间信
+
+```golang
+// (In function main.)
+if err := WaitForServer(url); err != nil {
+    fmt.Fprintf(os.Stderr, "Site is down: %v\n", err)
+    os.Exit(1)
+}
+```
+
+### 仅输出错误信息
+
+- 有时，我们只需要输出错误信息就足够了，不需要中断程序的运行
+- 我们可以通过log包提供函数或者标准错误流输出错误信息
+
+```golang
+if err := Ping(); err != nil {
+    log.Printf("ping failed: %v; networking disabled",err)
+}
+
+if err := Ping(); err != nil {
+    fmt.Fprintf(os.Stderr, "ping failed: %v; networking disabled\n", err)
+}
+```
+
+### 忽略错误
+
+```golang
+dir, err := ioutil.TempDir("", "scratch")
+if err != nil {
+    return fmt.Errorf("failed to create temp dir: %v",err)
+}
+// ...use temp dir…
+os.RemoveAll(dir) // ignore errors; $TMPDIR is cleaned periodically
+```
+
+- **在Go中，检查某个子函数是否失败后，我们通常将处理失败的逻辑代码放在处理成功的代码之前**
+- **如果某个错误会导致函数返回，那么成功时的逻辑代码不应放在else语句块中，而应直接放在函数体中。**
+- **Go中大部分函数的代码结构几乎相同，首先是一系列的初始检查，防止错误发生，之后是函数的实际逻辑**
+
+### EOF
+
+- io包保证任何由文件结束引起的读取失败都返回同一个错误——io.EOF
+
+```golang
+package io
+
+import "errors"
+
+// EOF is the error returned by Read when no more input is available.
+var EOF = errors.New("EOF")
+
+in := bufio.NewReader(os.Stdin)
+for {
+    r, _, err := in.ReadRune()
+    if err == io.EOF {
+        break // finished reading
+    }
+    if err != nil {
+        return fmt.Errorf("read failed:%v", err)
+    }
+    // ...use r…
+}
 ```
 
 ### Panic
