--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -3,7 +3,14 @@
 - [数组](#数组)
 - [Slice](#slice)
     - [append函数](#append函数)
+    - [copy函数](#copy函数)
+    - [slice的增删改查](#slice的增删改查)
 - [Map](#map)
+    - [map的查找](#map的查找)
+    - [Map的迭代](#map的迭代)
+    - [以不支持比较操作类型作为map的key](#以不支持比较操作类型作为map的key)
+    - [用map实现set](#用map实现set)
+    - [禁止对map元素取址](#禁止对map元素取址)
 - [结构体](#结构体)
     - [结构体初始化](#结构体初始化)
     - [结构体比较](#结构体比较)
@@ -231,7 +238,6 @@ func list(slice []interface{}) {
 - **不要以浮点数作为map的key**
 - map上的大部分操作，包括查找、删除、len和range循环都可以安全工作在nil值的map上，它们的行为和一个空的map类似
 - **向一个nil值的map存入元素将导致一个panic异常,必须先创建map**
-- **禁止对map元素取址**, 原因是map可能随着元素数量的增长而重新分配更大的内存空间，从而可能导致之前的地址无效
 
 ```golang
 
@@ -266,7 +272,9 @@ func equal(a, b map[string]int) bool {
 }
 ```
 
-- **map的查找key对应的value,如果不存在，则返回value对应的零值,可以用第二个返回值判断是否存在**
+### map的查找
+
+- **map查找key对应的value,如果不存在，则返回value对应的零值,可以用第二个返回值判断是否存在**
 
 ```golang
 ages = map[string]int{
@@ -285,6 +293,8 @@ if !ok {
 if bobage, ok := ages["bob"]; !ok { /* ... */ }
 ```
 
+### Map的迭代
+
 - **Map的迭代顺序是不确定的,如果要按K的顺序输出，则应当手动排序K**
 
 ```golang
@@ -299,26 +309,7 @@ for _, name := range names {
 }
 ```
 
-- set的实现，**使用value为bool类型的map**
-
-```golang
-func main() {
-    seen := make(map[string]bool) // a set of strings
-    input := bufio.NewScanner(os.Stdin)
-    for input.Scan() {
-        line := input.Text()
-        if !seen[line] {
-            seen[line] = true
-            fmt.Println(line)
-        }
-    }
-
-    if err := input.Err(); err != nil {
-        fmt.Fprintf(os.Stderr, "dedup: %v\n", err)
-        os.Exit(1)
-    }
-}
-```
+### 以不支持比较操作类型作为map的key
 
 - map或set的key是slice类型，但是map的key必须是可比较的类型，但是slice并不满足这个条件。
     - **定义一个辅助函数k**，将slice转为map对应的string类型的key，确保只有x和y相等时k(x) == k(y)才成立。
@@ -354,20 +345,124 @@ func hasEdge(from, to string) bool {
 }
 ```
 
+### 用map实现set
+
+- set的实现，**使用value为bool类型的map**
+
+```golang
+func main() {
+    seen := make(map[string]bool) // a set of strings
+    input := bufio.NewScanner(os.Stdin)
+    for input.Scan() {
+        line := input.Text()
+        if !seen[line] {
+            seen[line] = true
+            fmt.Println(line)
+        }
+    }
+
+    if err := input.Err(); err != nil {
+        fmt.Fprintf(os.Stderr, "dedup: %v\n", err)
+        os.Exit(1)
+    }
+}
+```
+
+### 禁止对map元素取址
+
+- **禁止对map元素取址**, 原因是map可能随着元素数量的增长而重新分配更大的内存空间，从而可能导致之前的地址无效
+- **map元素不能取址的一个直接情况就是，如果map的元素是结构体，那么无法直接修改结构体的成员变量**
+- **如果要修改map的value的struct，正确做法是完整替换 value 或使⽤指针**
+
+```golang
+type user struct{ name string }
+m := map[int]user{
+ 1: {"user1"},
+}
+
+// 当 map 因扩张⽽重新哈希时，各键值项存储位置都会发⽣改变。 
+// 因此，map被设计成 not addressable。 类似 m[1].name 这种期望透过原 value
+// 指针修改成员的⾏为⾃然会被禁⽌。
+m[1].name = "Tom" // Error: cannot assign to m[1].name
+
+u2 := user{"user2"}
+m[2] = u2
+fmt.Printf("%p\n", &u2)
+value := m[2]
+fmt.Printf("%p\n", &value)
+// 0xc04203e200
+// 0xc04203e210
+// 从上面也可以看出两者是不同的对象，取出来的值是对象的拷贝
+
+// 替换 value
+u := m[1]
+u.name = "Tom"
+m[1] = u
+
+// 通过指针
+m2 := map[int]*user{
+ 1: &user{"user1"},
+}
+m2[1].name = "Jack"
+```
+
 ## 结构体
 
 - **一个命名为S的结构体类型将不能再包含S类型的成员,但是S类型的结构体可以包含*S指针成员**
 - 结构体类型的零值是每个成员都是零值
-- 如果结构体没有任何成员的话就是空结构体，写作struct{}
+- 空结构 "节省" 内存，⽐如⽤来实现 set 数据结构，或者实现没有 "状态" 只有⽅法的 "静态类"
 
 ```golang
-// 使用空结构体构造set，不过一般不这么写
+// 使用空结构体构造set
 seen := make(map[string]struct{}) // set of strings
 // ...
 if _, ok := seen[s]; !ok {
     seen[s] = struct{}{}
     // ...first time seeing s...
 }
+```
+
+- **可定义字段标签，⽤反射读取。标签是类型的组成部分**
+
+```golang
+// 两者是不同的类型，因为类型的tag是不一样的
+var u1 struct { name string "username" }
+var u2 struct { name string }
+u2 = u1 // Error: cannot use u1 (type struct { name string "username" }) as
+ // type struct { name string } in assignment
+```
+
+### 匿名结构
+
+- ⽀持匿名结构，可⽤作结构成员或定义变量
+- **对于匿名结构，只要成员变量的的类型，名字，顺序一致，那么这两个匿名结构就是一样的**
+
+```golang
+type File struct {
+    name string
+    size int
+    attr struct {
+        perm int
+        owner int
+    }
+}
+
+f := File{
+    name: "test.txt",
+    size: 1025,
+    // attr: {0755, 1}, // Error: missing type in composite literal
+}
+
+f.attr.owner = 1
+f.attr.perm = 0755
+
+// 这说明这两个匿名结构是相同的数据结构
+var attr = struct {
+ perm int
+ owner int
+}{2, 0755}
+
+f.attr = attr
 ```
 
 ### 结构体初始化
@@ -392,8 +487,7 @@ var _ = p.T{a: 1, b: 2} // compile error: can't reference a, b
 var _ = p.T{1, 2}       // compile error: can't reference a, b
 ```
 
-- 结构体可以作为函数的参数和返回值，如果考虑效率的话，**较大的结构体通常会用指针的方式传入和返回**
-- **如果要在函数内部修改结构体成员的话，用指针传入是必须的；因为在Go语言中，所有的函数参数都是值拷贝传入的，函数参数将不再是函数调用时的原始变量**
+- - **值类型，赋值和传参会复制全部内容**，如果考虑效率的话，**较大的结构体通常会用指针的方式传入和返回**
 
 ```golang
 func AwardAnnualRaise(e *Employee) {
