--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -12,10 +12,12 @@
     - [用map实现set](#用map实现set)
     - [禁止对map元素取址](#禁止对map元素取址)
 - [结构体](#结构体)
+    - [匿名结构](#匿名结构)
     - [结构体初始化](#结构体初始化)
     - [结构体比较](#结构体比较)
     - [匿名成员](#匿名成员)
     - [匿名类型的方法集](#匿名类型的方法集)
+    - [go中的面向对象](#go中的面向对象)
 - [JSon](#json)
     - [编码](#编码)
 
@@ -514,7 +516,7 @@ fmt.Println(p == q)
 
 ### 匿名成员
 
-- **匿名成员:只声明一个成员对应的数据类型而不指明成员的名字**
+- **匿名成员:只声明一个成员对应的数据类型而不指明成员的名字，其实只是一种语法糖，从根本上说，就是 个与成员类型同名 (不含包名) 的字段**
 - **匿名成员的数据类型必须是命名的类型或指向一个命名的类型的指针**
 
 ```golang
@@ -581,19 +583,43 @@ w = Wheel{
         Point:  Point{X: 8, Y: 8},
         Radius: 5,
     },
-    // 因为}是另起一行，所以这里必须加上逗号
+    // 这里必须加上逗号
     Spokes: 20, // NOTE: trailing comma necessary here (and at Radius)
 }
 ```
 
-- **因为匿名成员也有一个隐式的名字，因此不能同时包含两个类型相同的匿名成员，这会导致名字冲突**
+- **因为匿名成员也有一个隐式的名字，因此同一层级不能同时包含两个类型相同的匿名成员，这会导致名字冲突，同样不能同时嵌入某种类型和其指针类型，因为它们名字相同**
 - **因为匿名成员实际上是名字为类型名的成员，所以匿名成员也有可见性的规则约束**
 
 ### 匿名类型的方法集
 
 - 简短的点运算符语法可以用于选择匿名成员嵌套的成员，也可以用于访问它们的方法。
 - **外层的结构体不仅仅是获得了匿名成员类型的所有成员，而且也获得了该类型导出的全部的方法。**
- 这个机制可以用于将一个有简单行为的对象组合成有复杂行为的对象。组合是Go语言中面向对象编程的核心
+
+### go中的面向对象
+
+- **面向对象三大特征里，Go仅支持封装，没有class关键字，没有继承、多态**
+
+```golang
+type User struct {
+    id   int
+    name string
+}
+
+type Manager struct {
+    User
+    title string
+}
+
+m := Manager{User{1, "Tom"}, "Administrator"}
+
+// Error: cannot use m (type Manager) as type User in assignment
+// 没有继承， 然也不会有多态。
+var u User = m
+
+// 同类型拷,值传递
+var u User = m.User
+```
 
 ## JSon
 
