--- a/golang/go基础/05_方法.md
+++ b/golang/go基础/05_方法.md
@@ -2,41 +2,46 @@
 
 - [方法声明](#方法声明)
 - [基于指针对象的方法](#基于指针对象的方法)
+- [nil](#nil)
 - [通过嵌入结构体来扩展类型](#通过嵌入结构体来扩展类型)
-    - [匿名字段暴露方法的优先级](#匿名字段暴露方法的优先级)
+- [匿名字段暴露方法的优先级](#匿名字段暴露方法的优先级)
+    - [使用重写实现"Override"的功能](#使用重写实现override的功能)
+    - [根据查找的优先级](#根据查找的优先级)
 - [方法值和方法表达式](#方法值和方法表达式)
 
 ## 方法声明
 
 - 在函数声明时，在其名字之前放上一个变量，即是一个方法。这个附加的参数会将该函数附加到这种类型上，即相当于为这种类型定义了一个独占的方法。
-- **函数和方法的区别是指有没有接收器**，而不像其他语言那样是指有没有返回值。
+- **函数和方法的区别是指有没有接收器**。
+- **方法函数声明前的变量叫作方法接受器，可以选用this,self,对象的第一个字母等**
+- **只能给同一个包内的任意命名类型定义方法**
+- **不支持方法重载，receiver 只是参数签名的组成部分**
 
 ```golang
-package geometry
-
-import "math"
-
-type Point struct{ X, Y float64 }
-
-// traditional function
-func Distance(p, q Point) float64 {
-    return math.Hypot(q.X-p.X, q.Y-p.Y)
+type Queue struct {
+    elements []interface{}
 }
 
-// same thing, but as a method of the Point type
-func (p Point) Distance(q Point) float64 {
-    return math.Hypot(q.X-p.X, q.Y-p.Y)
+// 创建对象实例。
+func NewQueue() *Queue {
+    return &Queue{make([]interface{}, 10)}
 }
 
-p := Point{1, 2}
-q := Point{4, 6}
-fmt.Println(Distance(p, q)) // "5", function call
-fmt.Println(p.Distance(q))  // "5", method call
+// 省略 receiver 参数名。
+func (*Queue) Push(e interface{}) error {
+    panic("not implemented")
+}
+
+// 不支持方法重载
+// func (Queue) Push(e int) error {
+//     panic("not implemented")
+// }
+
+// receiver 参数名可以是 self、this 或其他
+func (self *Queue) length() int {
+    return len(self.elements)
+}
 ```
-
-- 函数声明前的变量叫作方法接受器，一般命名时选用命名类型的第一个字母
-
-- 在Go语言中，**我们可以给同一个包内的任意命名类型定义方法，只要这个命名类型的底层类型(这个例子里，底层类型是指[]Point这个slice，Path就是命名类型)不是指针或者interface。**
 
 ```golang
 // A Path is a journey connecting the points with straight lines.
@@ -55,7 +60,10 @@ func (path Path) Distance() float64 {
 
 ## 基于指针对象的方法
 
-- 当我们需要通过方法更新接受器对象，或者接受者变量本身比较大时，就可以用其指针而不是对象来声明方法
+- **参数receiver类型可以是T或 *T。基类型T不能是接口或指针**
+- 在声明一个方法的接受器该是指针还是非指针类型时：
+    - **第一方面是这个对象本身是不是特别大**，如果声明为非指针变量时，调用会产生一次拷贝；
+    - **第二方面是如果你用指针类型作为接受器，即使对其进行了拷贝，这种指针类型指向的始终是一块内存址**
 
 ```golang
 //方法的名字是 (*Point).ScaleBy
@@ -65,11 +73,7 @@ func (p *Point) ScaleBy(factor float64) {
 }
 ```
 
-- 在现实的程序里，**一般会约定如果Point这个类有一个指针作为接收器的方法，那么所有Point的方法都必须有一个指针接收器**，即使是那些并不需要这个指针接收器的函数
-- 对于每一个命名过的具体类型T；它一些方法的接收者是类型T本身然而另一些则是一个*T的指针。在T类型的参数上调用一个*T的方法是合法的，只要这个参数是一个变量；编译器隐式的获取了它的地址。
- 
- 但这仅仅是一个语法糖：T类型的值不拥有所有*T指针的方法，那这样它就可能只实现更少的接口
-- **不管你的方法的接受器是指针类型还是非指针类型，都是可以通过指针/非指针类型进行调用的，编译器会帮你做类型转换**
+- **不管你的方法的接受器是指针类型还是非指针类型，都是可以通过指针/非指针类型进行调用的，编译器会帮你做类型转换**，但这仅仅是一个语法糖：T类型的值不拥有receiver为*T指针的方法，那这样它就可能只实现更少的接口
 
 ```golang
 func (p *Point) ScaleBy(factor float64) {
@@ -90,9 +94,7 @@ fmt.Println(p) // "{2, 4}"
 Point{1, 2}.ScaleBy(2) // compile error: can't take address of Point literal
 ```
 
-- 在声明一个方法的接受器该是指针还是非指针类型时，你需要考虑两方面：
-    - **第一方面是这个对象本身是不是特别大**，如果声明为非指针变量时，调用会产生一次拷贝；
-    - **第二方面是如果你用指针类型作为接受器，那么你一定要注意，就算你对其进行了拷贝，这种指针类型指向的始终是一块内存地址**
+## nil
 
 - **nil也是一个合法的接收器类型**,就像一些函数允许nil指针作为参数一样，方法理论上也可以用nil指针作为其接收器，尤其当nil对于对象来说是合法的零值时，比如map或者slice
 
@@ -124,7 +126,7 @@ struct {
 }
 ```
 
-- 如果构体 S，包含一个匿名字段 T，那么这个结构体 S 就有了 T的方法。
+- 如果结构体S，包含一个匿名字段T，那么这个结构体 S 就有了 T的方法。
 - 如果包含的匿名字段为 *T，那么这个结构体 S 就有了 *T 的方法。
 - 如果S包含的匿名字段为 T或*T，那么 *S就有了 *T的方法。
 
@@ -165,8 +167,7 @@ fmt.Println(p.Distance(q.Point)) // "10"
 p.Distance(q) // compile error: cannot use q (ColoredPoint) as Point
 ```
 
-- 一个ColoredPoint并不是一个Point，但它"has a"Point，**是组合而非继承的关系，并且它有从Point类里引入的Distance和ScaleBy方法。**
- 内嵌字段会指导编译器去生成额外的包装方法来委托已经声明好的方法
+- 一个ColoredPoint并不是一个Point，但它"has a"Point，**是组合而非继承的关系，并且它有从Point类里引入的Distance和ScaleBy方法。**内嵌字段会指导编译器去生成额外的包装方法来委托已经声明好的方法
 
 ```golang
 func (p ColoredPoint) Distance(q Point) float64 {
@@ -178,25 +179,28 @@ func (p *ColoredPoint) ScaleBy(factor float64) {
 }
 ```
 
-- **在类型中内嵌的匿名字段也可能是一个命名类型的指针，这种情况下字段和方法会被间接地引入到当前的类型中，访问需要通过该指针指向的对象去取**。
- 添加这一层间接关系让我们可以共享通用的结构并动态地改变对象之间的关系
+- **在类型中内嵌的匿名字段也可能是一个命名类型的指针，这种情况下字段和方法会被间接地引入到当前的类型中，访问需要通过该指针指向的对象去取**。添加这一层间接关系让我们可以共享通用的结构并动态地改变对象之间的关系
 - 当编译器解析一个选择器到方法时，比如p.ScaleBy，
     - 它会首先去找直接定义在这个类型里的ScaleBy方法
-    - 然后找被ColoredPoint的内嵌字段们引入的方法，去找Point和RGBA的内嵌字段引入的方法
+    - 然后找被ColoredPoint的内嵌字段们引入的方法，找Point和RGBA的内嵌字段引入的方法
     - 然后一直递归向下找。
     - 如果选择器有二义性的话编译器会报错，比如你在同一级里有两个同名的方法
+- **通过匿名字段，结构体可获得和继承类似的复用能力。依据编译器查找次序，只需在外层定义同名方法，就可以实现 "override"。**
 
-### 匿名字段暴露方法的优先级
+## 匿名字段暴露方法的优先级
 
 - [匿名字段暴露方法的优先级](http://blog.csdn.net/typ2004/article/details/41605083)
 
 ```golang
 type gzipResponseWriterstruct {
-// io.Writer这个接口已经有 Write方法了，http.ResponseWriter 同样有 Write方法。那么///对 g.Write写的时候，到底调用哪个呢？是 g.Writer.Write 还是 g.ResponseWriter.Write呢？你不知道程序也不知道，如果编译就出现“Write模糊不清”的错误。
+// io.Writer这个接口已经有 Write方法了，http.ResponseWriter 同样有 Write方法。那么
+// 对 g.Write写的时候，到底调用哪个呢？是 g.Writer.Write 还是 g.ResponseWriter.Write呢？如果编译就出现“Write模糊不清”的错误。
     io.Writer
     http.ResponseWriter
 }
 ```
+
+### 使用重写实现"Override"的功能
 
 - **解决办法1：就是重写 gzipResponseWriter的 Write方法**，指明要写到哪一方
 
@@ -205,6 +209,8 @@ func (w gzipResponseWriter) Write(b []byte) (int, os.Error) {
     returnw.Writer.Write(b)
 }
 ```
+
+### 根据查找的优先级
 
 - **解决办法2：使用匿名字段暴露方法优先级来确定重复方法的时候使用哪一个方法，原则就是【简单优先】**。所以我们这里把 http.ResponseWriter弄复杂一点，使用另一个结构体先包裹一次,这样就是 io.Writer的方法是会优先暴露出来的
 
