--- a/golang/go基础/05_方法.md
+++ b/golang/go基础/05_方法.md
@@ -7,7 +7,10 @@
 - [匿名字段暴露方法的优先级](#匿名字段暴露方法的优先级)
     - [使用重写实现"Override"的功能](#使用重写实现override的功能)
     - [根据查找的优先级](#根据查找的优先级)
+- [方法集](#方法集)
 - [方法值和方法表达式](#方法值和方法表达式)
+    - [方法值](#方法值)
+    - [方法表达式](#方法表达式)
 
 ## 方法声明
 
@@ -225,10 +228,32 @@ type gzipResponseWriterstruct {
 }
 ```
 
+## 方法集
+
+- 每个类型都有与之关联的⽅法集，这会影响到接⼝实现规则。
+    - 类型 T ⽅法集包含全部 receiver T ⽅法。
+    - 类型 *T ⽅法集包含全部 receiver T + *T ⽅法。
+    - 如类型 S 包含匿名字段 T，则 S ⽅法集包含 T ⽅法。
+    - 如类型 S 包含匿名字段 *T，则 S ⽅法集包含 T + *T ⽅法。
+    - 不管嵌⼊ T 或 *T，*S ⽅法集总是包含 T + *T ⽅法。
+- ⽤实例 value 和 pointer 调⽤⽅法 (含匿名字段) 不受⽅法集约束，编译器总是查找全部⽅法，并⾃动转换 receiver 实参。
+
 ## 方法值和方法表达式
 
-- **当调用一个方法时**，与调用一个普通的函数相比，**我们必须要用选择器(p.Distance)语法来指定方法的接收器**
-- p.Distance叫作“选择器”，选择器会返回一个**方法"值"->一个将方法(Point.Distance)绑定到特定接收器变量的函数**
+- 根据调⽤者不同，⽅法分为两种表现形式：
+
+```golang
+instance.method(args...)
+<type>.func(instance, args...)
+```
+
+- 前者称为方法值，后者方法表达式。两者都可像普通函数那样赋值和传参，区别在于 method value 绑定实例，
+ ⽽ method expression 则须显式传参
+
+### 方法值
+
+- 当调用一个方法时，与调用一个普通的函数相比，**我们必须要用选择器(p.Distance)语法来指定方法的接收器**
+- p.Distance叫作“选择器”，**选择器会返回一个方法"值"->一个将方法(Point.Distance)绑定到特定接收器变量的函数**
 
 ```golang
 p := Point{1, 2}
@@ -252,7 +277,36 @@ r := new(Rocket)
 time.AfterFunc(10 * time.Second, func() { r.Launch() })
 // 使用方法值
 time.AfterFunc(10 * time.Second, r.Launch)
+
 ```
+
+- - method value 会复制 receiver。
+
+```golang
+type User struct {
+    id int
+    name string
+}
+
+func (self User) Test() {
+    fmt.Println(self)
+}
+
+func main() {
+    u := User{1, "Tom"}
+    // ⽴即复制 receiver，因为不是指针类型，不受后续修改影响。
+    mValue := u.Test 
+    u.id, u.name = 2, "Jack"
+    u.Test()
+     mValue()
+}
+
+//输出：
+// {2 Jack}
+// {1 Tom}
+```
+
+### 方法表达式
 
 - **当T是一个类型时，方法表达式可能会写作T.f或者(*T).f，会返回一个方法表达式，这种函数会将其第一个参数用作接收器，后面紧跟原方法的参数，可以用不写选择器的方式来对其进行调用**
 
@@ -293,5 +347,26 @@ func (path Path) TranslateBy(offset Point, add bool) {
         // Call either path[i].Add(offset) or path[i].Sub(offset).
         path[i] = op(path[i], offset)
     }
+}
+```
+
+```golang
+type Data struct{}
+
+func (Data) TestValue() {}
+
+func (*Data) TestPointer() {}
+
+func main() {
+    var p *Data = nil
+    p.TestPointer()
+
+    (*Data)(nil).TestPointer() // method value
+
+     (*Data).TestPointer(nil) // method expression
+
+    // p.TestValue() // invalid memory address or nil pointer dereference
+    // (Data)(nil).TestValue() // cannot convert nil to type Data
+    // Data.TestValue(nil) // cannot use nil as type Data in function argument
 }
 ```
