--- a/golang/go基础/06-接口.md
+++ b/golang/go基础/06-接口.md
@@ -5,8 +5,10 @@
 - [类型转换](#类型转换)
     - [Comma-ok断言](#comma-ok断言)
 
+## 接口基本
+
 - **接口是合约，接口类型具体描述了一系列方法的集合**，一个实现了这些方法的具体类型是这个接口类型的实例。
-- 接口内嵌,与语法和结构内嵌相似
+- 接口内嵌,语法和结构体匿名字段相似
 
 ```golang
 
@@ -37,9 +39,36 @@ type ReadWriter interface {
 }
 ```
 
+- 匿名接⼝可⽤作变量类型，或结构成员
+
+```golang
+type Tester struct {
+    // Tester内部有一个接口成员
+    s interface {
+        String() string
+    }
+}
+
+type User struct {
+    id int
+    name string
+}
+
+func (self *User) String() string {
+    return fmt.Sprintf("user %d, %s", self.id, self.name)
+}
+
+func main() {
+    // *User实现了上面的匿名接口，所以这里可以赋值
+    t := Tester{&User{1, "Tom"}}
+    fmt.Println(t.s.String())
+}
+```
+
 ## 实现接口
 
 - 实现接口，必须实现接口所包含的所有的方法
+- **空接⼝ interface{} 没有任何⽅法签名，也就意味着任何类型都实现了空接⼝。**
 - 对于每一个命名过的具体类型T；它一些方法的接收者是类型T本身然而另一些则是一个*T的指针。
 - **在T类型的参数上调用一个*T的方法是合法的，只要这个参数是一个变量；编译器隐式的获取了它的地址。**
 
@@ -48,7 +77,6 @@ type Person struct {
     Name string
     ID   string
     age  int
-    set  IntSet
 }
 
 func (p *Person) String() string {
@@ -66,19 +94,12 @@ func (p *Person) String() string {
 // compile error: cannot call pointer method on datastruct.Person literal
 // cannot take the address of datastruct.Person literal
 //  datastruct.Person{Name: "Keylen", ID: "3"}是一个局部对象，不是一个变量，所以不能取地址，所以这里是不行的
-var c = datastruct.Person{Name: "Keylen", ID: "3"}.String()
-fmt.Println(c)
+
+// var c = datastruct.Person{Name: "Keylen", ID: "3"}.String()
+// fmt.Println(c)
 ```
 
-- **在T类型变量上调用接受器为*T的方法仅是一个语法糖，T类型的值不拥有所有*T指针的方法，那这样它就可能只实现更少的接口**,上面的例子中，*Person才是fmt.Stringer接口类型，Person并不是fmt.Stringer类型
-
-```golang
-luke := datastruct.Person{Name: "Luke", ID: "1"}
-fmt.Println(kylen.String())
-
-leia = &datastruct.Person{Name: "Leia", ID: "2"}
-fmt.Println(a.String())
-```
+- **可以在T类型变量上调用接受器为T指针的方法仅是一个语法糖，T类型的值不拥有所有T指针的方法**,上面的例子中，*Person才是fmt.Stringer接口类型，Person并不是fmt.Stringer类型
 
 ## 接口值
 
