golang接口与并发

--- a/golang/go基础/06-接口.md
+++ b/golang/go基础/06-接口.md
@@ -69,8 +69,7 @@ func main() {
 
 - 实现接口，必须实现接口所包含的所有的方法
 - **空接⼝ interface{} 没有任何⽅法签名，也就意味着任何类型都实现了空接⼝。**
-- 对于每一个命名过的具体类型T；它一些方法的接收者是类型T本身然而另一些则是一个*T的指针。
-- **在T类型的参数上调用一个*T的方法是合法的，只要这个参数是一个变量；编译器隐式的获取了它的地址。**
+- **可以在T类型变量上调用接受器为T指针的方法仅是一个语法糖，T类型的值不拥有所有T指针的方法,下面的例子中，*Person才是fmt.Stringer接口类型，Person并不是fmt.Stringer类型**
 
 ```golang
 type Person struct {
@@ -99,14 +98,10 @@ func (p *Person) String() string {
 // fmt.Println(c)
 ```
 
-- **可以在T类型变量上调用接受器为T指针的方法仅是一个语法糖，T类型的值不拥有所有T指针的方法**,上面的例子中，*Person才是fmt.Stringer接口类型，Person并不是fmt.Stringer类型
-
 ## 接口值
 
 - 接口值，由两个部分组成，一个具体的类型和那个类型的值
-- **对于一个接口的零值就是它的类型和值的部分都是nil**
-- **一个接口值基于它的动态类型被描述为空或非空，来判断这是否一个空的接口值。你可以通过使用w==nil或者w!=nil来判读接口值是否为空**
-- **接口值为nil指的是它的动态类型为空，如果它的动态类型不为空，它的动态类型可能为空的**
+- **只有具体的类型和类型的值都为空时，接口对象才为nil**
 
 ```golang
 // w 为nil
@@ -141,7 +136,7 @@ fmt.Printf("%T\n", w)
 const debug = true
 
 func main() {
-    var buf *bytes.Buffer
+    var buf  *bytes.Buffer
     if debug {
         buf = new(bytes.Buffer) // enable collection of output
     }
@@ -156,7 +151,6 @@ func main() {
 
 // If out is non-nil, output will be written to it.
 func f(out io.Writer) {
-    // ...do something...
     if out != nil {
         out.Write([]byte("done!\n"))
     }
@@ -164,7 +158,7 @@ func f(out io.Writer) {
 ```
 
 ```golang
-// 接口值零值
+// 接口值默认为nil
 var buf io.Writer
 if debug {
     buf = new(bytes.Buffer) // enable collection of output
@@ -174,8 +168,17 @@ f(buf) // OK
 
 ## 类型转换
 
+- **具体类型之间的转换不存在隐式转换，必须手动转换**
+
+```golang
+var a int32 = 0
+
+// 编译不通过的，必须显示转换
+// var b int64 = a
+b := int64(a)
+```
+
 - **普通类型向接口类型的转换是隐式的，接口类型向普通类型转换需要类型断言**
-- **由于interface{}包含了0个方法，所以任何类型都实现了interface{}接口**
 
 ### Comma-ok断言
 
@@ -221,5 +224,37 @@ func sqlQuote(x interface{}) string {
     default:
         panic(fmt.Sprintf("unexpected type %T: %v", x, x))
     }
+}
+```
+
+## 接口技巧
+
+- 让编译器检查，以确保某个类型实现接⼝
+
+```golang
+var _ fmt.Stringer = (*Data)(nil)
+```
+
+- **某些时候，让函数直接 "实现" 接⼝能省不少事**
+
+```golang
+type Tester interface {
+    Do()
+}
+
+type FuncDo func()
+
+func (self FuncDo) Do() { self() }
+
+func main() {
+    var t Tester = FuncDo(func() { println("Hello, World!") })
+    t.Do()
+}
+
+type HandlerFunc func(ResponseWriter, *Request)
+
+// HandlerFunc实现了http.Handler接口
+func (f  HandlerFunc) ServeHTTP(w ResponseWriter, r *Request) {
+    f(w, r)
 }
 ```
