--- a/golang/go基础/04_函数.md
+++ b/golang/go基础/04_函数.md
@@ -15,7 +15,9 @@
     - [忽略错误](#忽略错误)
     - [EOF](#eof)
     - [Panic](#panic)
+    - [统一的错误处理](#统一的错误处理)
 - [Recover](#recover)
+- [自定义Error](#自定义error)
 
 ```golang
 func name(parameter-list) (result-list) {
@@ -528,6 +530,88 @@ func printStack() {
 }
 ```
 
+### 统一的错误处理
+
+- golang的错误处理方式容易导致错误处理代码的冗余，对于这种情况是我们通过复用检测函数来减少类似的代码
+
+```golang
+func init() {
+    http.HandleFunc("/view", viewRecord)
+}
+
+// 最原始的方法在每个地方处理错误
+func viewRecord(w http.ResponseWriter, r *http.Request) {
+    c := appengine.NewContext(r)
+    key := datastore.NewKey(c, "Record", r.FormValue("id"), 0, nil)
+    record := new(Record)
+    if err := datastore.Get(c, key, record); err != nil {
+        http.Error(w, err.Error(), 500)
+        return
+    }
+    if err := viewTemplate.Execute(w, record); err != nil {
+        http.Error(w, err.Error(), 500)
+    }
+}
+
+```
+
+```golang
+// 将http接口包装一层
+func init() {
+    http.Handle("/view", appHandler(viewRecord))
+}
+
+type appHandler func(http.ResponseWriter, *http.Request) error
+
+func (fn appHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
+    if err := fn(w, r); err != nil {
+        http.Error(w, err.Error(), 500)
+    }
+}
+
+func viewRecord(w http.ResponseWriter, r *http.Request) error {
+    c := appengine.NewContext(r)
+    key := datastore.NewKey(c, "Record", r.FormValue("id"), 0, nil)
+    record := new(Record)
+    if err := datastore.Get(c, key, record); err != nil {
+        return err
+    }
+    return viewTemplate.Execute(w, record)
+}
+```
+
+```golang
+// 自定义错误类型方便扩展
+type appError struct {
+    Error   error
+    Message string
+    Code    int
+}
+
+type appHandler func(http.ResponseWriter, *http.Request) *appError
+
+func (fn appHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
+    if e := fn(w, r); e != nil { // e is *appError, not os.Error.
+        c := appengine.NewContext(r)
+        c.Errorf("%v", e.Error)
+        http.Error(w, e.Message, e.Code)
+    }
+}
+
+func viewRecord(w http.ResponseWriter, r *http.Request) *appError {
+    c := appengine.NewContext(r)
+    key := datastore.NewKey(c, "Record", r.FormValue("id"), 0, nil)
+    record := new(Record)
+    if err := datastore.Get(c, key, record); err != nil {
+        return &appError{err, "Record not found", 404}
+    }
+    if err := viewTemplate.Execute(w, record); err != nil {
+        return &appError{err, "Can't display record", 500}
+    }
+    return nil
+}
+```
+
 ## Recover
 
 - 通常来说，不应该对panic异常做任何处理，但有时，也许我们可以从异常中恢复，至少我们可以在程序崩溃前，做一些操作,比如关闭连接等
@@ -573,5 +657,64 @@ func soleTitle(doc *html.Node) (title string, err error) {
         return "", fmt.Errorf("no title element")
     }
     return title, nil
+}
+```
+
+## 自定义Error
+
+- **error是一个interface，所以在实现自己的包的时候，通过定义实现此接口的结构，我们就可以实现自己的错误定义**
+
+```golang
+type SyntaxError struct {
+    msg    string // 错误描述
+    Offset int64  // 错误发生的位置
+}
+
+func (e *SyntaxError) Error() string { return e.msg }
+```
+
+- **处理错误时可以通过类型断言获取错误类型，从而细化错误的处理**
+
+```golang
+if err := dec.Decode(&val); err != nil {
+    if serr, ok := err.(*json.SyntaxError); ok {
+        line, col := findLine(f, serr.Offset)
+        return fmt.Errorf("%s:%d:%d: %v", f.Name(), line, col, err)
+    }
+    return err
+}
+```
+
+- **函数返回自定义错误时，返回值推荐设置为error类型，而非自定义错误类型**
+- **特别需要注意的是不应预声明自定义错误类型的变量**(接口只有类型和值都为nil,接口类型才为nil)
+
+```golang
+func Decode() *SyntaxError { // 错误，将可能导致上层调用者err!=nil的判断永远为true。
+    var err *SyntaxError     // 预声明错误变量
+    if 出错条件 {
+        err = &SyntaxError{}
+    }
+    return err               // 错误，err永远等于非nil，导致上层调用者err!=nil的判断始终为true
+}
+```
+
+- **更复杂的错误**
+
+```golang
+package net
+
+type Error interface {
+    error
+    Timeout() bool   // Is the error a timeout?
+    Temporary() bool // Is the error temporary?
+}
+
+// 如果一个网络发生临时性错误，那么将会sleep 1秒之后重试
+if nerr, ok := err.(net.Error); ok && nerr.Temporary() {
+    time.Sleep(1e9)
+    continue
+}
+if err != nil {
+    log.Fatal(err)
 }
 ```
