--- a/golang/go基础/01_程序结构.md
+++ b/golang/go基础/01_程序结构.md
@@ -299,6 +299,31 @@ default:
 }
 ```
 
+- **switch如果一个case有多个值，与java中的写法是不同的**
+
+```java
+switch (type) {
+    case 1:
+    case 2:
+        return "a";
+    case 3:
+        return "b"
+    default:
+        return "c"
+}
+```
+
+```golang
+switch type {
+    case 1, 2:
+        return "a";
+    case 3:
+        return "b"
+    default:
+        return "c"
+}
+```
+
 ### Goto, Break, Continue
 
 - **⽀持在函数内 goto 跳转。标签名区分⼤⼩写，未使⽤标签引发错误**
