--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -387,15 +387,6 @@ m := map[int]user{
 // 指针修改成员的⾏为⾃然会被禁⽌。
 m[1].name = "Tom" // Error: cannot assign to m[1].name
 
-u2 := user{"user2"}
-m[2] = u2
-fmt.Printf("%p\n", &u2)
-value := m[2]
-fmt.Printf("%p\n", &value)
-// 0xc04203e200
-// 0xc04203e210
-// 从上面也可以看出两者是不同的对象，取出来的值是对象的拷贝
-
 // 替换 value
 u := m[1]
 u.name = "Tom"
@@ -470,7 +461,7 @@ f.attr = attr
 ### 结构体初始化
 
 - 结构体的初始化，**无论哪种方法，如果不在定义结构体的包内部，都没法显示初始化未导出的值**
-    - 按结构体变量定义的顺序指定**每个变量**的值，只在定义结构体的包内部使用，或者是在较小的结构体中使用
+    - 按结构体变量定义的顺序指定**每个变量**的值，就只在定义结构体的包内部使用，或者是在较小的结构体中使用，如果含有未导出的值，那么不能采用这种方法
     - 通过成员名字和相应的值来初始化，未指定时使用对应类型的零值
 
 ```golang
