--- a/golang/go标准库/01_IO.md
+++ b/golang/go标准库/01_IO.md
@@ -20,5 +20,17 @@ type ReaderFrom interface {
 ```
 
 - ReadFrom 从 r 中读取数据，直到 EOF 或发生错误
-- **ReadFrom 方法不会返回 err == EOF**
+- **ReadFrom 方法不会返回EOF**
 - 如果ReaderFrom可用，那么io.Copy会使用ReadFrom函数
+
+## ReadAt
+
+```golang
+type ReaderAt interface {
+    ReadAt(p []byte, off int64) (n int, err error)
+}
+```
+
+- 从偏移off处开始读取
+- 即使 ReadAt 返回的 n < len(p)，**它也会在调用过程中使用 p 的全部作为暂存空间**。
+- 若一些数据可用但不到 len(p) 字节，**ReadAt 就会阻塞**直到所有数据都可用或产生一个错误
