--- a/database/sql/03_索引.md
+++ b/database/sql/03_索引.md
@@ -1,5 +1,6 @@
 # INDEX
 
+- [相关文档](#相关文档)
 - [什么是索引](#什么是索引)
 - [为什么要使用索引](#为什么要使用索引)
 - [索引代价](#索引代价)
@@ -7,16 +8,18 @@
 - [索引的底层实现](#索引的底层实现)
 - [如何创建索引](#如何创建索引)
 
+## 相关文档
+
 - [数据库索引到底是什么，是怎样工作的](http://blog.csdn.net/weiliangliang111/article/details/51333169)
 - [深入浅出数据库索引原理](https://www.cnblogs.com/aspwebchh/p/6652855.html)
 
 ## 什么是索引
 
-- - **一个索引是存储了表中一个特定列的值的数据结构**,索引包含一个表中列的值，并且这些值存储在一个数据结构中
+- **一个索引是存储了表中一个特定列的值的数据结构**,索引包含一个表中列的值，并且这些值存储在一个数据结构中
 
 ## 为什么要使用索引
 
-- - **使用索引的全部意义就是通过缩小一张表中需要查询的记录/行的数目来加快搜索的速度。**
+- **使用索引的全部意义就是通过缩小一张表中需要查询的记录/行的数目来加快搜索的速度。**
 
 ## 索引代价
 
@@ -56,7 +59,7 @@ CREATE INDEX Index_Total
   ON Orders(Total DESC );
 ```
 
-- **在表上创建唯一的索引**，唯一的索引意味着两个行不能拥有相同的索引值
+- **在表上创建唯一的索引**，唯一的索引意味着两个行不能拥有相同的索引值，也可以使用UNIQUE约束
 
 ```sql
 -- 唯一索引，如果该列有相同的行，那么创建不会成功的
