--- a/database/mysql/02_常用操作.md
+++ b/database/mysql/02_常用操作.md
@@ -56,10 +56,10 @@ SHOW VARIABLES     | 服务器配置变量
 ## 临时表
 
 - **MySQL临时表在我们需要保存一些临时数据时是非常有用的。临时表只在当前连接可见，当关闭连接时，Mysql会自动删除表并释放所有空间**
-- 其它对临时表的操作与普通表一样
+- 对临时表的操作与普通表一样
 
 ```sql
--- CREATE TEMPORARY TABLE创建临时表，基它操作与普通表相同
+-- CREATE TEMPORARY TABLE创建临时表
 CREATE TEMPORARY TABLE TempratyTest (
   id INT PRIMARY KEY AUTO_INCREMENT,
   a TEXT
@@ -71,7 +71,7 @@ CREATE TEMPORARY TABLE TempratyTest (
 - **CREATE TABLE ... SELECT:命令复制了表的结构和数据，但是不包含索引等**
 
 ```sql
-CREATE TABLE Orders3 (SELECT * FROM Orders);
+CREATE TABLE Orders1 (SELECT * FROM Orders);
 ```
 
 - 复制表，包括表的结构，索引，默认值等
@@ -120,9 +120,7 @@ SELECT name FROM person_tbl WHERE name REGEXP '^st';
 SELECT name FROM person_tbl WHERE name REGEXP '^[aeiou]|ok$';
 ```
 
-
-
-## MYSQL中的事物
+## MYSQL中的事务
 
 - 在MySQL中**只有使用了Innodb数据库引擎的数据库或表才支持事务**
 - 事务用来管理insert,update,delete 语句
@@ -134,9 +132,68 @@ SELECT name FROM person_tbl WHERE name REGEXP '^[aeiou]|ok$';
 - **I(isolation)隔离性**:  通常来说，一个事务所做的修改在最终提交以前，对其他事务是不可见的
 - **D(durability)持久性**:事务处理结束后，对数据的修改就是永久的
 
-### MYSQL中的事务
+### 事务的并发问题
 
-#### 事务控制语句
+- **脏读**：事务A读取了事务B更新的数据，然后B回滚操作，那么A读取到的数据是脏数据
+- **不可重复读**：事务A多次读取同一数据，事务B在事务A多次读取的过程中，对数据作了更新并提交，导致事务A多次读取同一数据时，结果不一致。
+- **幻读**：系统管理员A将数据库中所有学生的成绩从具体分数改为ABCDE等级，但是系统管理员B就在这个时候插入了一条具体分数的记录，当系统管理员A改结束后发现还有一条记录没有改过来，就好像发生了幻觉一样，这就叫幻读。
+- 小结：不可重复读的和幻读很容易混淆，**不可重复读侧重于修改，幻读侧重于新增或删除。解决不可重复读的问题只需锁住满足条件的行，解决幻读需要锁表**
+
+### MYSQL中的事务隔离级别
+
+事务隔离级别               | 脏读 | 不可重复读 | 幻读
+---------------------------|------|------------|------
+读未提交（read-uncommitted） | 是   | 是         | 是
+不可重复读（read-committed） | 否   | 是         | 是
+可重复读（repeatable-read）  | 否   | 否         | 是
+串行化（serializable）       | 否   | 否         | 否
+
+- 相关文档
+  - [MySQL的四种事务隔离级别](https://www.cnblogs.com/huanongying/p/7021555.html)
+  - [[Mysql]——通过例子理解事务的4种隔离级别](http://www.cnblogs.com/snsdzjlz320/p/5761387.html)
+
+#### Read Uncommitted(读取未提交内容)
+
+- (1)所有事务都可以看到其他未提交事务的执行结果
+- (2)本隔离级别很少用于实际应用，因为它的性能也不比其他级别好多少
+- (3)该级别引发的问题是——脏读(Dirty Read)：读取到了未提交的数据
+
+#### Read Committed(读取提交内容)
+
+- (1)这是大多数数据库系统的默认隔离级别（但不是MySQL默认的）
+- (2)它满足了隔离的简单定义：一个事务只能看见已经提交事务所做的改变
+- (3)这种隔离级别出现的问题是——不可重复读(Nonrepeatable Read)：不可重复读意味着我们在同一个事务中执行完全相同的select语句时可能看到不一样的结果。导致这种情况的原因可能有：(1)有一个交叉的事务有新的commit，导致了数据的改变;(2)一个数据库被多个实例操作时,同一事务的其他实例在该实例处理其间可能会有新的commit
+
+#### Repeatable Read(可重读)
+
+- (1)这是MySQL的默认事务隔离级别
+- (2)它确保同一事务的多个实例在并发读取数据时，会看到同样的数据行
+- (3)此级别可能出现的问题——幻读(Phantom Read)：当用户读取某一范围的数据行时，另一个事务又在该范围内插入了新行，当用户再读取该范围的数据行时，会发现有新的“幻影” 行
+- (4)InnoDB和Falcon存储引擎通过多版本并发控制(MVCC，Multiversion Concurrency Control)机制解决了该问题
+- **sql标准中事务隔离级别为可重复读时，读写操作要锁行的，mysql居然没有锁**
+
+#### Serializable(可串行化)
+
+- (1)这是最高的隔离级别
+- (2)它通过强制事务排序，使之不可能相互冲突，从而解决幻读问题。简言之,它是在每个读的数据行上加上共享锁。
+- (3)在这个级别，可能导致大量的超时现象和锁竞争
+
+#### MYSQL中相关的语法
+
+```sql
+-- 查询当前的事务隔离级别
+SELECT @@tx_isolation;
+
+-- 设置事务的隔离级别为“未提交读”
+set session transaction isolation level read uncommitted;
+set session transaction isolation level read committed;
+set session transaction isolation level repeatable read;
+set session transaction isolation level serializable;
+
+select @@global.tx_isolation, @@session.tx_isolation;
+```
+
+### 事务控制语句
 
 - BEGIN或START TRANSACTION；显式地开启一个事务；
 - COMMIT；也可以使用COMMIT WORK，不过二者是等价的。COMMIT会提交事务，并使已对数据库进行的所有修改称为永久性的；
