--- a/golang/go基础/01_程序结构.md
+++ b/golang/go基础/01_程序结构.md
@@ -302,6 +302,7 @@ default:
 - **switch如果一个case有多个值，与java中的写法是不同的**
 
 ```java
+// java
 switch (type) {
     case 1:
     case 2:
@@ -311,9 +312,8 @@ switch (type) {
     default:
         return "c"
 }
-```
 
-```golang
+// golang
 switch type {
     case 1, 2:
         return "a";
