--- a/golang/go基础/02_基础数据类型.md
+++ b/golang/go基础/02_基础数据类型.md
@@ -26,7 +26,15 @@
 - 格式化输出
     - %b二进制，%d十进制，%o八进制，%x十六进制
     - %08b表示打印至少8个字符宽度
+    - %f, %g, %e  浮点数： 3.141593 3.141592653589793 3.141593e+00
+    - %t 布尔：true或false
+    - %c 字符（rune） (Unicode码点)
+    - %s  字符串
+    - %q  带双引号的字符串"abc"或带单引号的字符'c'
+    - %v  变量的自然形式（natural format）
+    - %T  变量的类型
     - %之后的[1]副词告诉Printf函数再次使用第一个操作数
+    - %%          字面上的百分号标志（无操作数）
     - %后的#副词告诉Printf在用%o、%x或%X输出时生成0、0x或0X前缀
 
 ```golang
@@ -92,8 +100,7 @@ fmt.Println(math.Inf(1), math.Inf(-1))
 // +Inf -Inf
 ```
 
-- 如果一个函数返回的浮点数结果可能失败，最好的做法是用单独的标志报告失败,
- 因为float的比较可能有误差
+- **如果一个函数返回的浮点数结果可能失败，最好的做法是用单独的标志报告失败**,因为float的比较可能有误差
 
 ```golang
 func compute() (value float64, ok bool) {
@@ -151,7 +158,7 @@ func itob(i int) bool { return i != 0 }
 - **一个字符串是一个不可改变的字节序列**
 - **内置的len函数可以返回一个字符串中的字节数目，不是rune字符数目**
 - 子字符串操作s[i:j]基于原始的s字符串的第i个字节开始到第j个字节（并不包含j本身）生成一个新字符串
- 不管i还是j都可能被忽略，当它们被忽略时将采用0作为开始位置，采用len(s)作为结束的位置
+ 不管i还是j都可以不写，当它们不写时将采用0作为开始位置，采用len(s)作为结束的位置
 
 ```golang
 s := "hello, world"
@@ -198,6 +205,9 @@ Usage:
 ### unicode
 
 - utf-8
+- GBK编码，一个汉字占两个字节。
+- UTF-16编码，通常汉字占两个字节，CJKV扩展B区、扩展C区、扩展D区中的汉字占四个字节（一般字符的Unicode范围是U+0000至U+FFFF，而这些扩展部分的范围大于U+20000，因而要用两个UTF-16）。
+- UTF-8编码是变长编码，通常汉字占三个字节，扩展B区以后的汉字占四个字节。
 
 ```golang
 "世界"
@@ -413,6 +423,7 @@ fmt.Println(a, b, c, d) // "1 1 2 2"
 ### iota
 
 - 在一个const声明语句中，在第一个声明的常量所在的行，iota将会被置为0，然后在每一个有常量声明的行加一
+- **具体行常量的值还是由初始化表达式决定，只不过使用iota的话，后面的值的初始化形式和前面一样，而itoa会一步一步加1**
 
 ```golang
 type Weekday int
