--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -24,7 +24,7 @@
 ## 数组
 
 - **数组是值类型，赋值和传参会复制整个数组，⽽不是指针**
-- **指针数组 [n]*T，数组指针 *[n]T**
+- 指针数组 [n]*T，数组指针 *[n]T
 - **如果在数组的长度位置出现的是“...”省略号，则表示数组的长度是根据初始化值的个数来计算**
 - **数组的初始化还可以用键值对的形式**，这样初始化的顺序就没有关系了
 
@@ -507,7 +507,7 @@ fmt.Println(p == q)
 
 ### 匿名成员
 
-- **匿名成员:只声明一个成员对应的数据类型而不指明成员的名字，其实只是一种语法糖，从根本上说，就是 个与成员类型同名 (不含包名) 的字段**
+- **匿名成员:只声明一个成员对应的数据类型而不指明成员的名字，其实只是一种语法糖，从根本上说，就是 一个与成员类型同名 (不含包名) 的字段**
 - **匿名成员的数据类型必须是命名的类型或指向一个命名的类型的指针**
 
 ```golang
