thinking in java笔记整理

--- a/java/thinking in java/10_注解.md
+++ b/java/thinking in java/10_注解.md
@@ -10,7 +10,6 @@
     - [坚持使用@Override注解](#坚持使用override注解)
     - [用标记接口定义类型](#用标记接口定义类型)
 
-
 ## 基本语法
 
 ### 元注解
@@ -35,8 +34,7 @@
 
 ### 注解元素
 
-- 在注解中，**一般都会包含一些元素以表示某些值**，这些值与接口的函数类似，不过可以指定默认值，
- **没有元素的注解被称为标记注解**
+- 在注解中，**一般都会包含一些元素以表示某些值**，这些值与接口的函数类似，不过可以指定默认值，**没有元素的注解被称为标记注解**
 
  ```java
  @Target(ElementType.METHOD)
@@ -75,8 +73,7 @@
  }
 ```
 
-- **如果注解只有一个元素，并且元素的名字为value**,那么在使用注解时，无需能过键值对的形式给元素赋值
- **可以直接在括号内给出value所需的值即可**
+- **如果注解只有一个元素，并且元素的名字为value**,那么在使用注解时，无需能过键值对的形式给元素赋值，**可以直接在括号内给出value所需的值即可**
 
 ```java
  @Target(ElementType.METHOD)
@@ -85,7 +82,7 @@
      Class<? extends Exception>[] value();
  }
 
- @ExceptionTest({IndexOutOfBoundsException.class, NullPointerException.class})
+ @ExceptionTest({IndexOutOfBoundsException.class,NullPointerException.class})
  public static void doublyBad() {
      //...
  }
@@ -93,6 +90,8 @@
 ```
 
 ### 注解作为注解的元素
+
+- 注解默认值写法必须带上@符号
 
 ```java
  @Target(ElementType.FIELD)
@@ -114,7 +113,6 @@
 ```
 
 - 使用@Constraints实际也就表示所有元素都为默认值的@Constraints注解
-
 - 如果要嵌入的@Constraints的unique元素为true,那么在定义时要通过键值对指定
 
 ```java
@@ -165,11 +163,9 @@
 - **如果想要覆盖超类中的方法,就应当使用@Override注解**，可以帮助发现很多问题
  比如equals如果参数不为Object，那么结果就是只是重载没有达到重写的目的
 
-
 ### 用标记接口定义类型
 
 - **标记接口：是没有包含方法声明的接口，而只是指明一个类实现了具有某种属性的接口**
-
 - **标记注解：没有任何元素的注解**
 
 - 标记接口相对于标记注解的优点：
@@ -184,13 +180,8 @@
     - 如果**标记的不是类或都接口，必须用注解**
     - **如果要写多个接受这种标记参数的方法，那么最好使用标记接口**，因为这样可以用接口作为类型参数，
      那么可以提供编译期的类型检查
-    - **如果只用写一个接受这种标记参数的方法，并且要永远限制这个标记只用于特定的类型，那么标记接口好于标记注解**，
-    比如Set相对于Collection没有方法增加，增加Set接口更加的好
+    - **如果只用写一个接受这种标记参数的方法，并且要永远限制这个标记只用于特定的类型，那么标记接口好于标记注解**，比如Set相对于Collection没有方法增加，增加Set接口更加的好
 
 - 总结：
     - 如果想要标记元素而非类或接口，或者未来会给标记添加更多的信息，如果要用于注解框架中，那么应当使用注解而不是标记接口
     - **如果发现编写的标记注解的@Target为ElementType.TYPE的时候，要多考虑是否要使用标记接口**
-
-
-
-
