--- a/java/thinking in java/03_类复用.md
+++ b/java/thinking in java/03_类复用.md
@@ -19,14 +19,67 @@
     - 构造函数；
     - 使用对象之前，惰性加载
 
-- **导出类初始化，总是先初始化基类**，类的构造是从基类向外扩散的，所以**基类在导出类构造器可以访问它之前，已经完成了初始化**
+- **导出类初始化，总是先初始化基类**
+- 类的构造是从基类向外扩散的，所以**基类在导出类构造器可以访问它之前，已经完成了初始化**，这个初始化包括成员变量与
+ 基类构造函数的调用
 - 如果基类没有构造函数或者有默认构造函数，导出类的构造函数就不必明确调用基类构造函数，否则必须用super调用父类的构造函数
+
+```java
+public class BaseClass {
+    protected static String sBaseStr;
+    static {
+        sBaseStr = "BaseClass Static";
+        System.out.println("BaseClass static代码块");
+    }
+
+    protected String mBaseStr;
+
+    {
+        mBaseStr = "BaseClass Block";
+        System.out.println("BaseClass 普通代码块");
+    }
+
+    public BaseClass() {
+        System.out.println("BaseClass 构造函数");
+    }
+}
+
+public class InhertClass extends BaseClass{
+    protected static String sInhertStr;
+    static {
+        sInhertStr = "InhertClass Static";
+        System.out.println("InhertClass static代码块");
+    }
+
+    protected String mInhertStr;
+    {
+        mBaseStr = "InhertClass Block";
+        System.out.println("InhertClass 普通代码块");
+    }
+
+    public InhertClass() {
+        System.out.println("BaseClass 构造函数");
+    }
+}
+
+public static void main(String[] args) {
+        InhertClass a = new InhertClass();
+}
+
+// 输入结果
+// BaseClass static代码块
+// InhertClass static代码块
+// BaseClass 普通代码块
+// BaseClass 构造函数
+// InhertClass 普通代码块
+// BaseClass 构造函数
+```
 
 ## 清理函数
 
 - 一般不必写清理函数，但如果要清理除了内存以外的动作时，要写清理函数
-- **如果要写的话，首先要执行导出类的特定清理动作，其清理顺序与初始化的顺序相反，然后才调用其基类的清理方法**
-- 不要直接使用finalize()方法
+- **如果要写清理函数的话，首先要执行导出类的清理动作，然后才调用其基类的清理方法**
+- **不要直接使用finalize()方法**
 
 ## 名称屏蔽
 
@@ -35,8 +88,7 @@
 ## protected
 
 - 就类的用户而言，protected相当于private
-- 对于该类的导出类与同一个包的类而言，它却是可以被访问的
-- **protected也提供了包访问权**
+- 对于该类的导出类与同一个包的类而言，**protected也提供了包访问权**，是可以被访问的
 
 ## final
 
