--- a/java/thinking in java/04_多态 接口.md
+++ b/java/thinking in java/04_多态 接口.md
@@ -21,8 +21,9 @@
 
 ### 构造函数
 
-* **构造函数中一般不要调用可以被override的方法**，因为调用构造函数的时候 ，对象可能处于一个未完全初始化好的状态，具有多态性的方法可能并不是预期的效果
+* **构造函数中不要调用可以被override的方法**，因为调用构造函数的时候 ，对象可能处于一个未完全初始化好的状态，具有多态性的方法可能并不是预期的效果
 * **尽可能用简单的方法使对象进入正常的状态**，如果可以的话，避免调用其它的方法，在构造器中唯一能够安全调用地方法是基类中的final 方法，当然也适用于自身的private方法
+* **构造函数中最好不要让被构造的对象逃逸**，因为对象可能处于一个未完全初始化好的状态
 * 构造函数先初始化基类，后导出类
 * 析构函数先析构导出类，后基类
 
@@ -57,10 +58,7 @@
 
 ### 接口的常见用法
 
-* 策略模式，根据传递参数的类型而具有不同行为的方法，将要进行的方法设计成接口，类来实再接口，从而达到目的
+* 策略模式，根据传递参数的类型而具有不同行为的方法，将要进行的方法设计成接口，类实现接口，从而达到目的
 * 适配器模式，将有的接口转化成所需要的接口
 * 工厂方法模式
 * 应当优先选择类而不是接口，从类开始，如果接口的必需性变得非常确切，那么就进行重构，接口是一种重要的工具，但是它们容易被滥用
-
-
-
