--- a/java/thinking in java/09_泛型.md
+++ b/java/thinking in java/09_泛型.md
@@ -42,8 +42,7 @@
 - 泛型方法优先于泛型类
 - 如果类的static方法要使用泛型，因为static方法不能访问类的泛型参数，所以必须使用泛型方法
 - 使用泛型类时，必须在创建对象时指定类型参数，而使用泛型方法通常不必指定参数。
-- **泛型方法可以显示的指明参数类型**，要显式的指明类型，必须在点操作符和方法名之间插入尖括号，然后把类类型置于尖括号内，
- 如果是在定义该方法的类的内部，必须在点操作符之前使用this关键字，如果是使用static方法，则必须在点操作符之前加上类名
+- **泛型方法可以显示的指明参数类型**，要显式的指明类型，必须在点操作符和方法名之间插入尖括号，然后把类类型置于尖括号内，如果是在定义该方法的类的内部，必须在点操作符之前使用this关键字，如果是使用static方法，则必须在点操作符之前加上类名
 
 ```java
  public class New {
@@ -60,10 +59,9 @@
 ### 擦除基本
 
 - **java的泛型是使用擦除来实现的**，这意味着在**使用泛型时，任何具体的类型信息都被擦除了，你唯一知道的是你在使用一个对象**，
- 因而List<Person>与List<Integer>在运行时的类型是一样,它们都被擦除成了原生类型List
+ 因而List&lt;Person&gt;与List&lt;Integer&gt;在运行时的类型是一样,它们都被擦除成了原生类型List
 
 ```java
-
 Class c1 = new ArrayList<String>().getClass();
 Class c2 = new ArrayList<Integer>().getClass();
 c1 == c2; // true
@@ -73,8 +71,7 @@ c1 == c2; // true
 - 泛型参数被当作第二类型处理，即不能在某些重要的上下文环境中使用的类型，**泛型只有在静态类型检查期间才出现**
  **在此以后，程序中所有的泛型类型都将被擦除，替换为它们的第一个非泛型上界，如果没有指定边界，它将被擦除成Object**
 - 编写泛型代码时，必须时刻提醒自己，**你只是看起来好像拥有有关参数的类型信息而已**，但实际上它只是一个Object
-- 在泛型代码内部，**无法获取任何有关类型参数类型的信息**，
- 也就是说**无法显式的引用运行时类型的操作，比如转型,instanceof操作和new表达式**
+- 在泛型代码内部，**无法获取任何有关类型参数类型的信息**，也就是说**无法显式的引用运行时类型的操作，比如转型,instanceof操作和new表达式**
 
 ### 擦除的补偿
 
@@ -192,10 +189,10 @@ class ColoredDimension<T extends View & HasColor & Dimension> {}
 
 ### 通配符
 
-- **通配符“?”实际上表示某种，只是不知道它的确切类型**，比如List<? extends Fruit> 表示某种Fruit/Fruit子类的列表，
- 但是并不意味着它可以持有任何的Fruit
-- 当我们指定类型是List<? extends Fruit> 的时候，list的add的方法的参数
- 就变成了? extends Fruit,它不知道是哪种类型，所以也就不支持任何的Fruit类型
+- **通配符“?”实际上表示某种，只是不知道它的确切类型**，比如List<? extends Fruit> 表示某种Fruit/Fruit子类的列表，但是并不意味着它可以持有任何的Fruit
+- 当我们指定类型是List<? extends Fruit> 的时候，list的add的方法的参数就变成了? extends Fruit,
+ 它不知道是哪种类型，所以也就不支持任何的Fruit类型
+- List 实际上表示持有任何类型的原生List,相当于List&lt;Object&gt;，而List<?> 表示具有某种特定类型的非原生List,只是我们不知道那种类型是什么
 
 ```java
 // 可以向上转型，但是下面任何一种添加都是错误的
@@ -213,9 +210,6 @@ flist.add(null);
 Fruit f = flist.get(0);
 ```
 
-- List 实际上表示持有任何类型的原生List,相当于List<Object>
- 而List<?> 表示具有某种特定类型的非原生List,只是我们不知道那种类型是什么
-
 ### super
 
 - 表示是某个类型的某个父类，但是也不确定到底是哪个父类
@@ -225,6 +219,24 @@ Fruit f = flist.get(0);
 <? super T>
 // compile error
 <T super MyClass>
+```
+
+### 泛型不存在继承关系
+
+- **同一泛型的多个版本，哪怕泛型参数之间有继承关系，但是泛型之前也不存在继承关系**
+
+```java
+public void showKeyValue1(Generic<Number> obj){
+    Log.d("泛型测试","key value is " + obj.getKey());
+}
+
+Generic<Integer> gInteger = new Generic<Integer>(123);
+Generic<Number> gNumber = new Generic<Number>(456);
+
+showKeyValue(gNumber);
+
+// Generic<java.lang.Integer> cannot be applied to Generic<java.lang.Number>
+// showKeyValue(gInteger);
 ```
 
 ## 泛型常见的问题
@@ -321,6 +333,21 @@ class Hamster extends  ComparablePet implements Comparable<ComparablePet> {
 class Hamster extends  ComparablePet {
      public int compareTo(ComparablePet o ) { return 0;}
 }
+```
+
+### 泛型数组
+
+- 在java中是“**不能创建一个确切的泛型类型的数组**”的
+
+```java
+// !!!不允许，List<String>是一个确切的泛型类型
+List<String>[] ls = new ArrayList<String>[10];
+
+// 可以
+List<?>[] ls = new ArrayList<?>[10];
+
+// 可以
+List<String>[] ls = new ArrayList[10];
 ```
 
 ## 自限定类型
@@ -539,8 +566,7 @@ class CommunidateReflectively {
 
 - 泛型方法优于泛型类
 
-- 在泛型中创建数组，可以建立一个Object的数组，然后进行强转，
- 但是使用Array.newInstance()是推荐的方式
+- 在泛型中创建数组，可以建立一个非泛型边界的数组，然后进行强转，但是使用Array.newInstance()是推荐的方式
 
  ```java
  public class ArrayMaker<T> {
@@ -605,7 +631,7 @@ public <T> T[] toArray(T[] a) {
 ### 列表优先于树组
 
 - **数组是协变的**，如果Sub是Super的子类，那么Sub[]就是Super[]的子类
-- **泛型是固定的**，对于两个不同的类型T1, T2,即使它们之间存在继承关系，List<T1>既不是List<T2>的子类，也不是List<T2>的超类，两者是不同的类型
+- **泛型是固定的**，对于两个不同的类型T1, T2,即使它们之间存在继承关系，List&lt;T1&gt;既不是List&lt;T2&gt;的子类，也不是List&lt;T2&gt;的超类，两者是不同的类型
 
 ```java
  // 下面代码在编译期间是可以通过的，但是在运行时会出现错误
